--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第1章  引论.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第1章  引论.md
@@ -121,7 +121,7 @@ if <复杂测试> then 5 else <类型错误>
 
 #### 语言安全性的灵活性
 
-**语言安全性**(Language Safety)通常并不是绝对的。即使是**安全语言**(Safe Languages)也经常为程序员提供“逃生通道”，例如可以调用用其他可能不安全的语言编写的**外部函数**(Foreign Function Calls)。事实上，这种逃生通道有时会在语言内部以受控形式提供。例如，在 OCaml 中的 `Obj.magic` 或者 Standard ML 的 `Unsafe.cast`。另外，一些语言如**Modula-3**和**C#** 提供了一种“**不安全子语言**(Unsafe Sublanguage)”，专门用于实现低级运行时功能，如垃圾回收器。这类子语言只能在明确标记为不安全的模块中使用。
+**语言安全性**(Language Safety)通常并不是绝对的。即使是**安全语言**(Safe Languages)也经常为程序员提供“逃生通道”，例如可以调用用其他可能不安全的语言编写的**外部函数**(Foreign Function Calls)。事实上，这种逃生通道有时会在语言内部以受控形式提供。例如，在 OCaml 中的 $Obj.magic$ 或者 Standard ML 的 $Unsafe.cast$。另外，一些语言如**Modula-3**和**C#** 提供了一种“**不安全子语言**(Unsafe Sublanguage)”，专门用于实现低级运行时功能，如垃圾回收器。这类子语言只能在明确标记为不安全的模块中使用。
 
 #### 错误分类：被捕获的错误与未捕获的错误
 
