--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第11章 简单扩展.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第11章 简单扩展.md
@@ -17,7 +17,7 @@
 
 **添加新的基本类型：**
 
-- 除了之前的 $Bool$ 和 $Nat$，我们有时还会使用基本类型 $String$（字符串，如 `"hello"`）和 $Float$（浮点数，如 `3.14159`）来丰富示例。
+- 除了之前的 $Bool$ 和 $Nat$，我们有时还会使用基本类型 $String$（字符串，如 $"hello"$）和 $Float$（浮点数，如 $3.14159$）来丰富示例。
 
 **抽象化基本类型：**
 
@@ -137,7 +137,7 @@ $$
 - 我们将 $unit$ 添加到可能的计算结果值的集合中——实际上，$unit$ 是求值类型为 $Unit$ 的表达式唯一可能的结果。
 - 即使在纯函数式语言中，$Unit$ 类型也不是完全没有意义的，但它的主要应用是在具有副作用的语言中，例如对引用单元（reference cells）的赋值（assignment）——我们将在第13章中回到这个主题。
 - 在这样的语言中，我们关心的往往是表达式的副作用，而不是其结果；$Unit$ 是此类表达式的适当结果类型。
-- 这种对 $Unit$ 的使用类似于 C 和 Java 等语言中的 `void` 类型。名称 `void` 暗示了与空类型 $Bot$（参见§15.4）的联系，但 `void` 的用法实际上更接近于我们的 $Unit$。
+- 这种对 $Unit$ 的使用类似于 C 和 Java 等语言中的 $void$ 类型。名称 $void$ 暗示了与空类型 $Bot$（参见§15.4）的联系，但 $void$ 的用法实际上更接近于我们的 $Unit$。
 
 ---
 
@@ -225,7 +225,7 @@ $$
 
 - 另一个在后续示例中有用的派生形式是用于变量绑定器的“通配符”约定。
 - 当我们想要编写一个“哑元”（dummy）的 λ 抽象，其中参数变量实际上并未在抽象的主体中使用时，这种情况经常发生（例如，在通过脱糖创建的顺序项中）。
-- 在这种情况下，不必显式地为绑定变量选择一个名称是很烦人的；相反，我们希望将其替换为一个通配符绑定器，记作 `_`。
+- 在这种情况下，不必显式地为绑定变量选择一个名称是很烦人的；相反，我们希望将其替换为一个通配符绑定器，记作 $_$。
 - 即，我们将 $\lambda\ _:S.\ t$ 作为 $\lambda x:S.\ t$ 的缩写，其中 $x$ 是不出现在 $t$ 中的某个变量。
 
 ---
@@ -254,7 +254,7 @@ $$
     \frac{\Gamma \vdash t : T_2}{\Gamma \vdash \lambda\ _:T_1.\ t : T_1 \rightarrow T_2} \quad (T\text{-AbsWildcard})
     $$
 
-    - 由于通配符 `_` 不出现在 $t$ 中，我们不需要在类型环境 $\Gamma$ 中添加任何绑定。
+    - 由于通配符 $_$ 不出现在 $t$ 中，我们不需要在类型环境 $\Gamma$ 中添加任何绑定。
 
 - **求值规则：**
 
@@ -419,7 +419,7 @@ $$
 **概述：**
 
 - 类型断言（Ascription）是一个简单但常用的特性，它允许我们显式地为给定的项指定一个特定的类型。
-- 我们使用 `t \text{ as } T` 来表示“将类型 $T$ 断言给项 $t$”。
+- 我们使用 $t \text{ as } T$ 来表示“将类型 $T$ 断言给项 $t$”。
 - 类型规则 $T\text{-Ascribe}$ 和求值规则 $E\text{-Ascribe}$ 定义了类型断言的行为。
 
 ---
@@ -630,7 +630,7 @@ $$
 
 - 在编写复杂表达式时，给某些子表达式命名可以避免重复，提高可读性。
 - 大多数语言都提供一种或多种方式来实现这一点。
-- 在 ML 中，我们使用 `let x = t_1 \text{ in } t_2` 来表示“求值表达式 $t_1$，将结果值绑定到名称 $x$，然后在求值 $t_2$ 时使用该绑定”。
+- 在 ML 中，我们使用 $let x = t_1 \text{ in } t_2$ 来表示“求值表达式 $t_1$，将结果值绑定到名称 $x$，然后在求值 $t_2$ 时使用该绑定”。
 
 ---
 
@@ -695,14 +695,14 @@ $$
 
 **题目：**
 
-- `letexercise` 类型检查器（可在书的网络资源中找到）是一个不完整的 let 表达式实现：提供了基本的解析和打印函数，但 `eval1` 和 `typeof` 函数中缺少了对 `TmLet` 的子句（取而代之的是匹配所有内容并使用断言失败使程序崩溃的虚拟子句）。
+- $letexercise$ 类型检查器（可在书的网络资源中找到）是一个不完整的 let 表达式实现：提供了基本的解析和打印函数，但 $eval1$ 和 $typeof$ 函数中缺少了对 $TmLet$ 的子句（取而代之的是匹配所有内容并使用断言失败使程序崩溃的虚拟子句）。
 - 完成它。
 
 ---
 
 **解答：**
 
-**1. 完善 `eval1` 函数中的 `TmLet` 子句**
+**1. 完善 $eval1$ 函数中的 $TmLet$ 子句**
 
 ```ocaml
 let rec eval1 ctx t =
@@ -719,10 +719,10 @@ let rec eval1 ctx t =
 
 - **解释：**
 
-  - 如果 `t1` 是值，则将 `x` 替换为 `v1`（`t1` 的值）并继续求值 `t2`。
-  - 如果 `t1` 不是值，则对 `t1` 进行一步求值，然后构造新的 `TmLet`。
+  - 如果 $t1$ 是值，则将 $x$ 替换为 $v1$（$t1$ 的值）并继续求值 $t2$。
+  - 如果 $t1$ 不是值，则对 $t1$ 进行一步求值，然后构造新的 $TmLet$。
 
-**2. 完善 `typeof` 函数中的 `TmLet` 子句**
+**2. 完善 $typeof$ 函数中的 $TmLet$ 子句**
 
 ```ocaml
 let rec typeof ctx t =
@@ -736,9 +736,9 @@ let rec typeof ctx t =
 
 - **解释：**
 
-  - 首先计算 `t1` 的类型 `tyT1`。
-  - 将 `x : tyT1` 添加到上下文中，得到新的上下文 `ctx'`。
-  - 在新的上下文中计算 `t2` 的类型。
+  - 首先计算 $t1$ 的类型 $tyT1$。
+  - 将 $x : tyT1$ 添加到上下文中，得到新的上下文 $ctx'$。
+  - 在新的上下文中计算 $t2$ 的类型。
 
 ---
 
@@ -750,7 +750,7 @@ let rec typeof ctx t =
 
 **定义：**
 
-- 将 `let x = t_1 \text{ in } t_2` 定义为：
+- 将 $let x = t_1 \text{ in } t_2$ 定义为：
 
   $$
   \text{let } x = t_1\ \text{in}\ t_2 \overset{\text{def}}{=} (\lambda x:T_1.\ t_2)\ t_1
@@ -801,7 +801,7 @@ let rec typeof ctx t =
 
 **题目：**
 
-- 定义 let 作为派生形式的另一种方法可能是立即“执行”它——即将 `let x = t_1 \text{ in } t_2` 视为替换后的主体 `[x \mapsto t_1] t_2` 的缩写。这是个好主意吗？
+- 定义 let 作为派生形式的另一种方法可能是立即“执行”它——即将 $let x = t_1 \text{ in } t_2$ 视为替换后的主体 $[x \mapsto t_1] t_2$ 的缩写。这是个好主意吗？
 
 ---
 
@@ -813,7 +813,7 @@ let rec typeof ctx t =
 
 **理由：**
 
-- 如果直接将 let 定义为替换后的项 `[x \mapsto t_1] t_2`，则会改变程序的语义，特别是在存在副作用或非严格求值的情况下。
+- 如果直接将 let 定义为替换后的项 $[x \mapsto t_1] t_2$，则会改变程序的语义，特别是在存在副作用或非严格求值的情况下。
 
 - **举例说明：**
 
@@ -938,7 +938,7 @@ $$
 - **对偶的构造和解构：**
 
   - 使用 ${ t_1,\ t_2 }$ 构造一个对偶，包含两个分量 $t_1$ 和 $t_2$。
-  - 使用 `t.\!1` 和 `t.\!2` 从对偶中提取第一和第二分量。
+  - 使用 $t.\!1$ 和 $t.\!2$ 从对偶中提取第一和第二分量。
 
 - **求值顺序：**
 
@@ -1183,7 +1183,7 @@ $T_1 + T_2$ 表示和类型（sum type），表示一个类型的值可以是 $T
   case\ (inl\ v_0)\ of\ inl\ x_1 \Rightarrow t_1\ |\ inr\ x_2 \Rightarrow t_2 \rightarrow [x_1 \mapsto v_0]t_1
   $$
 
-  如果我们在一个 `case` 表达式中遇到一个带 $inl$ 标签的值 $v_0$，则 $case$ 表达式选择执行 $t_1$，并将 $v_0$ 赋给 $x_1$。
+  如果我们在一个 $case$ 表达式中遇到一个带 $inl$ 标签的值 $v_0$，则 $case$ 表达式选择执行 $t_1$，并将 $v_0$ 赋给 $x_1$。
 
 - **E-CaseInr**：
   $$
@@ -1214,7 +1214,7 @@ $T_1 + T_2$ 表示和类型（sum type），表示一个类型的值可以是 $T
   类似地，对 $inr$ 的参数求值。
 
 #### 类型规则
-**和类型**的类型规则主要涉及如何为 $inl$ 和 $inr$ 标签赋类型，以及如何判断 `case` 表达式的类型。
+**和类型**的类型规则主要涉及如何为 $inl$ 和 $inr$ 标签赋类型，以及如何判断 $case$ 表达式的类型。
 
 - **T-Inl**：
   $$
@@ -1246,7 +1246,7 @@ PhysicalAddr = {firstlast:String, addr:String};
 VirtualAddr = {name:String, email:String};
 ```
 
-我们可以定义一个新的类型 `Addr = PhysicalAddr + VirtualAddr;`，来表示一种可以包含这两种地址类型的和类型。如果 `pa` 是一个 `PhysicalAddr`，我们可以通过 `inl pa` 将它转换为类型 `Addr`。
+我们可以定义一个新的类型 $Addr = PhysicalAddr + VirtualAddr;$，来表示一种可以包含这两种地址类型的和类型。如果 $pa$ 是一个 $PhysicalAddr$，我们可以通过 $inl pa$ 将它转换为类型 $Addr$。
 
 ```haskell
 getName = λa:Addr.
@@ -1255,24 +1255,24 @@ getName = λa:Addr.
   | inr y ⇒ y.name;
 ```
 
-在这个函数中，`a` 的类型是 `Addr`，我们根据 `a` 的标签选择不同的分支来提取名字。
+在这个函数中，$a$ 的类型是 $Addr$，我们根据 $a$ 的标签选择不同的分支来提取名字。
 
 ---
 
 ### 习题 11.9.1
 
-**题目**：`if` 表达式可以看作是 `case` 表达式的一种退化形式，试将 `true`、`false` 和 `if` 用和类型和 `Unit` 表示出来。
+**题目**：$if$ 表达式可以看作是 $case$ 表达式的一种退化形式，试将 $true$、$false$ 和 $if$ 用和类型和 $Unit$ 表示出来。
 
 #### 解答：
 
-我们可以通过将 `true` 和 `false` 看作 `Unit` 的标签来重写 `if` 语句。用和类型表达 `true` 和 `false` 的新定义如下：
+我们可以通过将 $true$ 和 $false$ 看作 $Unit$ 的标签来重写 $if$ 语句。用和类型表达 $true$ 和 $false$ 的新定义如下：
 
 ```text
 true  = inl unit as Unit + Unit;
 false = inr unit as Unit + Unit;
 ```
 
-这意味着，`true` 是一个带有左标签的 `Unit`，而 `false` 是一个带有右标签的 `Unit`。接下来，我们可以用 `case` 表达式来重写 `if` 语句：
+这意味着，$true$ 是一个带有左标签的 $Unit$，而 $false$ 是一个带有右标签的 $Unit$。接下来，我们可以用 $case$ 表达式来重写 $if$ 语句：
 
 ```text
 if t1 then t2 else t3
@@ -1282,12 +1282,12 @@ case t1 of
 | inr unit ⇒ t3
 ```
 
-这样，我们就将 `if` 表达式定义为对一个和类型的模式匹配，其中 $t1$ 要么是 $inl unit$（对应 `true`），要么是 $inr unit$（对应 `false`）。
+这样，我们就将 $if$ 表达式定义为对一个和类型的模式匹配，其中 $t1$ 要么是 $inl unit$（对应 $true$），要么是 $inr unit$（对应 $false$）。
 
 #### 解析：
 
-- 通过使用和类型 $Unit + Unit$，我们可以为 `true` 和 `false` 提供一个统一的类型框架。
-- `if` 语句通过模式匹配来选择是执行 $t2$ 还是 $t3$，这类似于使用 `case` 表达式对和类型进行模式匹配的方式。
+- 通过使用和类型 $Unit + Unit$，我们可以为 $true$ 和 $false$ 提供一个统一的类型框架。
+- $if$ 语句通过模式匹配来选择是执行 $t2$ 还是 $t3$，这类似于使用 $case$ 表达式对和类型进行模式匹配的方式。
 
 ---
 
@@ -1350,14 +1350,14 @@ $$
   \text{case } (\langle l_j = v_j \rangle \text{ as } T) \text{ of } \langle l_i = x_i \rangle \Rightarrow t_i \rightarrow [x_j \mapsto v_j] t_j
   $$
 
-  如果我们在 `case` 表达式中遇到标签为 $l_j$ 的值 $\langle l_j = v_j \rangle$，则选择相应的分支 $t_j$，并将 $v_j$ 绑定到 $x_j$。
+  如果我们在 $case$ 表达式中遇到标签为 $l_j$ 的值 $\langle l_j = v_j \rangle$，则选择相应的分支 $t_j$，并将 $v_j$ 绑定到 $x_j$。
 
 - **E-Case**：
   $$
   t_0 \rightarrow t_0'\quad \text{case } t_0 \text{ of } \langle l_i = x_i \rangle \Rightarrow t_i \rightarrow \text{case } t_0' \text{ of } \langle l_i = x_i \rangle \Rightarrow t_i
   $$
 
-  当 `case` 表达式的参数还没有完全化简时，继续对它求值。
+  当 $case$ 表达式的参数还没有完全化简时，继续对它求值。
 
 - **E-Variant**：
   $$
@@ -1382,7 +1382,7 @@ $$
   \frac{\Gamma \vdash t_0 : \langle l_i : T_i \rangle \quad \forall i, \Gamma, x_i : T_i \vdash t_i : T}{\Gamma \vdash \text{case } t_0 \text{ of } \langle l_i = x_i \rangle \Rightarrow t_i : T}
   $$
 
-  如果 $t_0$ 的类型是 $\langle l_i : T_i \rangle$，并且所有分支 $t_i$ 的类型都是 $T$，则整个 `case` 表达式的类型也是 $T$。
+  如果 $t_0$ 的类型是 $\langle l_i : T_i \rangle$，并且所有分支 $t_i$ 的类型都是 $T$，则整个 $case$ 表达式的类型也是 $T$。
 
 #### 示例
 
@@ -1392,13 +1392,13 @@ $$
 Addr = <physical: PhysicalAddr, virtual: VirtualAddr>;
 ```
 
-其中，`PhysicalAddr` 和 `VirtualAddr` 分别是物理地址和虚拟地址的类型。我们可以构造一个物理地址的变体实例：
+其中，$PhysicalAddr$ 和 $VirtualAddr$ 分别是物理地址和虚拟地址的类型。我们可以构造一个物理地址的变体实例：
 
 ```text
 a = <physical=pa> as Addr;
 ```
 
-这里，`a` 的类型是 `Addr`，它包含一个物理地址 `pa`。接着，我们可以编写一个函数来提取地址中的名字：
+这里，$a$ 的类型是 $Addr$，它包含一个物理地址 $pa$。接着，我们可以编写一个函数来提取地址中的名字：
 
 ```haskell
 getName = λa:Addr.
@@ -1407,13 +1407,13 @@ getName = λa:Addr.
   | <virtual=y> ⇒ y.name;
 ```
 
-这个函数的类型是 `Addr → String`，它通过模式匹配来提取物理或虚拟地址中的名字。
+这个函数的类型是 $Addr → String$，它通过模式匹配来提取物理或虚拟地址中的名字。
 
 #### Option 类型和枚举类型
 
-**Option 类型**是一种非常有用的变体类型。例如，`OptionalNat = <none:Unit, some:Nat>` 表示一个值可以是一个自然数（用 `some` 标签标记），或者是空值 `none`（用 `Unit` 类型表示）。这与许多编程语言中的 `Option` 或 `Maybe` 类型类似。
+**Option 类型**是一种非常有用的变体类型。例如，$OptionalNat = <none:Unit, some:Nat>$ 表示一个值可以是一个自然数（用 $some$ 标签标记），或者是空值 $none$（用 $Unit$ 类型表示）。这与许多编程语言中的 $Option$ 或 $Maybe$ 类型类似。
 
-我们可以使用 `OptionalNat` 定义一个函数表：
+我们可以使用 $OptionalNat$ 定义一个函数表：
 
 ```haskell
 Table = Nat → OptionalNat;
@@ -1425,17 +1425,17 @@ extendTable = λt:Table. λm:Nat. λv:Nat.
   if equal n m then <some=v> as OptionalNat else t n;
 ```
 
-在这个例子中，`emptyTable` 是一个空表，它对任何输入都返回 `none`。`extendTable` 则是一个扩展表的函数，它为表中增加或更新一个键值对。
+在这个例子中，$emptyTable$ 是一个空表，它对任何输入都返回 $none$。$extendTable$ 则是一个扩展表的函数，它为表中增加或更新一个键值对。
 
 #### 枚举类型
 
-枚举类型是变体类型的一个特例，每个标签都与 `Unit` 类型关联。比如，表示一周工作日的枚举类型可以定义为：
+枚举类型是变体类型的一个特例，每个标签都与 $Unit$ 类型关联。比如，表示一周工作日的枚举类型可以定义为：
 
 ```haskell
 Weekday = <monday:Unit, tuesday:Unit, wednesday:Unit, thursday:Unit, friday:Unit>;
 ```
 
-这个枚举类型中的每个值都是带有 `Unit` 的变体，例如 `<monday=unit>`。
+这个枚举类型中的每个值都是带有 $Unit$ 的变体，例如 $<monday=unit>$。
 
 #### 单字段变体
 
@@ -1446,7 +1446,7 @@ DollarAmount = <dollars:Float>;
 EuroAmount = <euros:Float>;
 ```
 
-这种定义的变体可以确保不同的类型（如美元和欧元）不会被混淆使用。例如，`dollars2euros` 函数只能接受 `DollarAmount` 类型的参数，无法错误地传入 `EuroAmount`。
+这种定义的变体可以确保不同的类型（如美元和欧元）不会被混淆使用。例如，$dollars2euros$ 函数只能接受 $DollarAmount$ 类型的参数，无法错误地传入 $EuroAmount$。
 
 ---
 
@@ -1456,7 +1456,7 @@ EuroAmount = <euros:Float>;
 
 #### 解答：
 
-定义一个查找表的扩展函数 `extendTable` 和一个处理缺失值的查询函数 `lookupTable` 如下：
+定义一个查找表的扩展函数 $extendTable$ 和一个处理缺失值的查询函数 $lookupTable$ 如下：
 
 ```haskell
 extendTable = λt:Table. λm:Nat. λv:Nat.
@@ -1469,12 +1469,12 @@ lookupTable = λt:Table. λn:Nat.
   | <some=v> ⇒ v;
 ```
 
-- `extendTable` 函数接受一个表 `t`，一个键 `m`，一个值 `v`，以及一个待查的键 `n`，如果 $n = m$，则返回 `v`，否则查询表中已有的值。
-- `lookupTable` 函数用于查找表中键 `n` 的值，如果该键不存在（返回 `none`），则返回默认值 `999`，否则返回对应的值。
+- $extendTable$ 函数接受一个表 $t$，一个键 $m$，一个值 $v$，以及一个待查的键 $n$，如果 $n = m$，则返回 $v$，否则查询表中已有的值。
+- $lookupTable$ 函数用于查找表中键 $n$ 的值，如果该键不存在（返回 $none$），则返回默认值 $999$，否则返回对应的值。
 
 #### 解析：
 
-- 使用变体类型，我们能够处理值缺失的情况，并通过 `case` 表达式提供默认值。
+- 使用变体类型，我们能够处理值缺失的情况，并通过 $case$ 表达式提供默认值。
 - 变体类型确保了不同的分支是互斥的，避免了不正确的类型使用。
 
 ---
@@ -1485,11 +1485,11 @@ lookupTable = λt:Table. λn:Nat.
 
 ### 11.11 General Recursion
 
-递归函数是大多数编程语言中的基础特性之一。在无类型的lambda演算中，我们通过fix组合子定义递归函数。在类型化的环境中，递归函数可以类似地定义，但我们需要显式地添加 `fix` 作为一个新的原语（primitive），因为在简单类型lambda演算中我们无法定义递归函数。我们来看具体的规则和示例。
+递归函数是大多数编程语言中的基础特性之一。在无类型的lambda演算中，我们通过fix组合子定义递归函数。在类型化的环境中，递归函数可以类似地定义，但我们需要显式地添加 $fix$ 作为一个新的原语（primitive），因为在简单类型lambda演算中我们无法定义递归函数。我们来看具体的规则和示例。
 
 #### 11.11.1 fix 原语的定义
 
-`fix` 是一个固定点组合子，它通过不断自我应用来实现递归计算。为了能够支持递归定义，我们引入了 `fix`，其求值规则和类型规则如下：
+$fix$ 是一个固定点组合子，它通过不断自我应用来实现递归计算。为了能够支持递归定义，我们引入了 $fix$，其求值规则和类型规则如下：
 
 **新的语法形式**：
 
@@ -1504,14 +1504,14 @@ $$
   \text{fix} (\lambda x:T_1.t_2) \rightarrow [x \mapsto (\text{fix} (\lambda x:T_1.t_2))]t_2
   $$
 
-  当我们应用 `fix` 于一个lambda表达式时，求值通过将自身作为参数传递给该lambda表达式来继续。
+  当我们应用 $fix$ 于一个lambda表达式时，求值通过将自身作为参数传递给该lambda表达式来继续。
 
 - **E-Fix**：
   $$
   t_1 \rightarrow t_1' \quad \text{fix} t_1 \rightarrow \text{fix} t_1'
   $$
 
-  当 `fix` 应用于一个未完全求值的表达式时，我们对该表达式继续求值。
+  当 $fix$ 应用于一个未完全求值的表达式时，我们对该表达式继续求值。
 
 **新的类型规则**：
 
@@ -1520,9 +1520,9 @@ $$
   \frac{\Gamma \vdash t_1 : T_1 \rightarrow T_1}{\Gamma \vdash \text{fix} t_1 : T_1}
   $$
 
-  该规则表明，如果 $t_1$ 的类型是 $T_1 \rightarrow T_1$，那么 `fix t_1` 的类型是 $T_1$。
+  该规则表明，如果 $t_1$ 的类型是 $T_1 \rightarrow T_1$，那么 $fix t_1$ 的类型是 $T_1$。
 
-此外，`fix` 也可以用于定义递归函数的派生形式，如 `letrec`，它可以定义为：
+此外，$fix$ 也可以用于定义递归函数的派生形式，如 $letrec$，它可以定义为：
 $$
 \text{letrec } x : T_1 = t_1 \text{ in } t_2 \quad \equiv \quad \text{let } x = \text{fix} (\lambda x : T_1 . t_1) \text{ in } t_2
 $$
@@ -1531,24 +1531,24 @@ $$
 
 #### 示例：定义递归函数
 
-通过 `fix`，我们可以定义递归函数，如判断一个数是否为偶数的函数 `iseven`。
+通过 $fix$，我们可以定义递归函数，如判断一个数是否为偶数的函数 $iseven$。
 
-定义生成函数 `ff`：
+定义生成函数 $ff$：
 
 $$
 ff = \lambda ie:Nat \rightarrow Bool. \lambda x:Nat.
   \text{if } \text{iszero } x \text{ then true else if iszero } (\text{pred } x) \text{ then false else } ie (\text{pred}(\text{pred } x))
 $$
 
-`ff` 生成一个新的 `iseven` 函数，该函数通过递归调用 `ie` 来处理较小的数字。
+$ff$ 生成一个新的 $iseven$ 函数，该函数通过递归调用 $ie$ 来处理较小的数字。
 
-使用 `fix` 来定义 `iseven`：
+使用 $fix$ 来定义 $iseven$：
 
 $$
 iseven = \text{fix } ff
 $$
 
-这样，我们可以计算 $iseven(7)$ 得到 `false`，表示7不是偶数。
+这样，我们可以计算 $iseven(7)$ 得到 $false$，表示7不是偶数。
 
 ---
 
@@ -1584,7 +1584,7 @@ factorial = \text{fix } (\lambda f:Nat \rightarrow Nat. \lambda x:Nat.
   \text{if iszero } x \text{ then 1 else times \, x \, (f (\text{pred } x))})
 $$
 
-这些函数都使用 `fix` 实现递归，`equal` 比较两个数是否相等，`plus` 和 `times` 分别计算加法和乘法，而 `factorial` 计算阶乘。
+这些函数都使用 $fix$ 实现递归，$equal$ 比较两个数是否相等，$plus$ 和 $times$ 分别计算加法和乘法，而 $factorial$ 计算阶乘。
 
 ---
 
@@ -1592,23 +1592,23 @@ $$
 
 **解答**：
 
-我们可以使用 `letrec` 来代替 `fix` 定义递归函数：
+我们可以使用 $letrec$ 来代替 $fix$ 定义递归函数：
 
-1. **plus** 使用 `letrec`：
+1. **plus** 使用 $letrec$：
 
 $$
 \text{letrec } plus:Nat \rightarrow Nat \rightarrow Nat = \lambda x:Nat. \lambda y:Nat.
   \text{if iszero } x \text{ then } y \text{ else } plus (\text{pred } x) (\text{succ } y)
 $$
 
-2. **times** 使用 `letrec`：
+2. **times** 使用 $letrec$：
 
 $$
 \text{letrec } times:Nat \rightarrow Nat \rightarrow Nat = \lambda x:Nat. \lambda y:Nat.
   \text{if iszero } x \text{ then 0 else } plus \, y \, (times (\text{pred } x) y)
 $$
 
-3. **factorial** 使用 `letrec`：
+3. **factorial** 使用 $letrec$：
 
 $$
 \text{letrec } factorial:Nat \rightarrow Nat = \lambda x:Nat.
@@ -1619,7 +1619,7 @@ $$
 
 #### 11.12 列表（Lists）
 
-在编程语言中，列表是一种重要的数据结构。**列表类型** $List T$ 表示一个包含 $T$ 类型元素的有限长度列表。我们可以使用 `nil[T]` 来表示空列表，使用 `cons[T] t_1 t_2` 来将元素 $t_1$ 添加到列表 $t_2$ 的前面。
+在编程语言中，列表是一种重要的数据结构。**列表类型** $List T$ 表示一个包含 $T$ 类型元素的有限长度列表。我们可以使用 $nil[T]$ 来表示空列表，使用 $cons[T] t_1 t_2$ 来将元素 $t_1$ 添加到列表 $t_2$ 的前面。
 
 **新的语法形式**：
 
@@ -1719,13 +1719,13 @@ $$
    $$
    \{ v_1, v_2 \}.1 \rightarrow v_1
    $$
-   - 当我们对一个完全求值的对应用 `.1` 时，结果是第一个元素 $v_1$。
+   - 当我们对一个完全求值的对应用 $.1$ 时，结果是第一个元素 $v_1$。
 
 2. **E-PairBeta2**：
    $$
    \{ v_1, v_2 \}.2 \rightarrow v_2
    $$
-   - 类似地，应用 `.2` 时，结果是第二个元素 $v_2$。
+   - 类似地，应用 $.2$ 时，结果是第二个元素 $v_2$。
 
 3. **E-Proj1**：
    $$
@@ -1997,7 +1997,7 @@ $$
 
 **第1步：给出类型规则**
 
-首先，我们需要定义模式（patterns）的语法和匹配规则，然后为新的 `let p = t_1 in t_2` 构造给出类型规则。
+首先，我们需要定义模式（patterns）的语法和匹配规则，然后为新的 $let p = t_1 in t_2$ 构造给出类型规则。
 
 **新语法形式**：
 
@@ -2060,7 +2060,7 @@ $$
 
   - **证明思路**：
 
-    - 对于新的 `let p = t_1 \text{ in } t_2` 构造，需要证明：
+    - 对于新的 $let p = t_1 \text{ in } t_2$ 构造，需要证明：
 
       - 当 $t_1$ 是值时，匹配成功后，替换后的 $t_2$ 在扩展的上下文下类型正确。
 
@@ -2074,7 +2074,7 @@ $$
 
     - 对于新的构造：
 
-      - 如果 `let p = t_1 \text{ in } t_2`，且 $t_1$ 是值，那么根据匹配规则，可以计算出替换，然后继续求值。
+      - 如果 $let p = t_1 \text{ in } t_2$，且 $t_1$ 是值，那么根据匹配规则，可以计算出替换，然后继续求值。
 
       - 如果 $t_1$ 不是值，则根据求值规则，对 $t_1$ 进行求值。
 
@@ -2100,7 +2100,7 @@ $$
 
 #### 概述
 
-许多程序需要处理**异构集合**（heterogeneous collections）的值。例如，二叉树的节点可以是叶子节点，或者是具有两个子节点的内部节点；类似地，列表的单元可以是 `nil`（空）或者一个包含头和尾的 `cons` 单元；在编译器的抽象语法树中，一个节点可以表示变量、抽象、应用等。支持这种编程的类型理论机制是**变体类型**（variant types）。
+许多程序需要处理**异构集合**（heterogeneous collections）的值。例如，二叉树的节点可以是叶子节点，或者是具有两个子节点的内部节点；类似地，列表的单元可以是 $nil$（空）或者一个包含头和尾的 $cons$ 单元；在编译器的抽象语法树中，一个节点可以表示变量、抽象、应用等。支持这种编程的类型理论机制是**变体类型**（variant types）。
 
 #### 语法与类型规则
 
@@ -2736,7 +2736,7 @@ type T = l1 of T1
                     | cons of 'a * 'a List
        ```
 
-     - 这里的 `'a` 是一个类型变量，允许定义任意类型的列表。
+     - 这里的 $'a$ 是一个类型变量，允许定义任意类型的列表。
 
 ---
 
