--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第22章 类型重构.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第22章 类型重构.md
@@ -177,13 +177,13 @@ unify(C) =
 
 ### 22.4.5 定理：统一算法的性质
 
-**定理：统一算法`unify`总是终止，如果输入的约束集可统一，则返回一个主要统一器，否则失败。**
+**定理：统一算法$unify$总是终止，如果输入的约束集可统一，则返回一个主要统一器，否则失败。**
 
 更正式地：
 
-1. 对于所有的约束集$C$，`unify(C)`会终止，要么失败，要么返回一个替换。
-2. 如果`unify(C) = \sigma`，那么$\sigma$是$C$的一个统一器。
-3. 如果$\delta$是$C$的一个统一器，那么`unify(C) = \sigma`，满足$\sigma \leq \delta$。
+1. 对于所有的约束集$C$，$unify(C)$会终止，要么失败，要么返回一个替换。
+2. 如果$unify(C) = \sigma$，那么$\sigma$是$C$的一个统一器。
+3. 如果$\delta$是$C$的一个统一器，那么$unify(C) = \sigma$，满足$\sigma \leq \delta$。
 
 **证明：**
 
@@ -211,14 +211,14 @@ unify(C) =
    
 3. **完备性（主要统一器）：**
 
-   如果存在一个统一器$\delta$，那么算法`unify(C)`返回的$\sigma$将满足$\sigma \leq \delta$。
+   如果存在一个统一器$\delta$，那么算法$unify(C)$返回的$\sigma$将满足$\sigma \leq \delta$。
    
    - 通过归纳证明，$\sigma$是一个最一般的统一器，所有其他统一器$\delta$都可以由$\sigma$通过替换$\gamma$得到。
    
 
 **结论：**
 
-统一算法`unify`是**正确且完备**的，它总是返回一个主要统一器（如果存在），并在无法统一时正确地失败。
+统一算法$unify$是**正确且完备**的，它总是返回一个主要统一器（如果存在），并在无法统一时正确地失败。
 
 ### 22.4.6 练习 [推荐，«««]
 
@@ -296,35 +296,35 @@ let rec unify (c: constr) : substitution option =
 **代码详解：**
 
 1. **类型定义：**
-   - `ty`：定义了四种类型：
-     - `TyBool`：布尔类型。
-     - `TyNat`：自然数类型。
-     - `TyVar of string`：类型变量，携带一个字符串作为名称。
-     - `TyArr of ty * ty`：函数类型，从一个类型到另一个类型。
+   - $ty$：定义了四种类型：
+     - $TyBool$：布尔类型。
+     - $TyNat$：自然数类型。
+     - $TyVar of string$：类型变量，携带一个字符串作为名称。
+     - $TyArr of ty * ty$：函数类型，从一个类型到另一个类型。
 
 2. **约束定义：**
-   - `constr`：一组类型等式，表示需要统一的类型对列表。
+   - $constr$：一组类型等式，表示需要统一的类型对列表。
 
 3. **替换定义：**
-   - `substitution`：一个列表，表示类型变量到类型的映射。
+   - $substitution$：一个列表，表示类型变量到类型的映射。
 
 4. **应用替换到类型：**
-   - `apply_subst`函数递归地将替换$\sigma$应用到类型$t$的所有部分。
+   - $apply_subst$函数递归地将替换$\sigma$应用到类型$t$的所有部分。
 
 5. **合并两个替换：**
-   - `compose_subst`函数将两个替换$\sigma1$和$\sigma2$合并，首先应用$\sigma1$到$\sigma2$中的所有类型，然后将$\sigma1$追加到结果中。
+   - $compose_subst$函数将两个替换$\sigma1$和$\sigma2$合并，首先应用$\sigma1$到$\sigma2$中的所有类型，然后将$\sigma1$追加到结果中。
 
 6. **出现检查（Occur Check）：**
-   - `occurs`函数检查类型变量$x$是否出现在类型$t$中，以防止生成循环替换。
+   - $occurs$函数检查类型变量$x$是否出现在类型$t$中，以防止生成循环替换。
 
 7. **统一算法实现：**
-   - `unify`函数递归地解决约束集。
+   - $unify$函数递归地解决约束集。
    - 对于每一个约束$(s, t)$：
      - 如果$s$和$t$相等，跳过该约束。
      - 如果$s$是类型变量$X$，且$X$不出现在$t$中，则将$X$替换为$t$，并继续解决剩余的约束。
      - 类似地，如果$t$是类型变量$X$，且$X$不出现在$s$中，则将$X$替换为$s$，并继续解决剩余的约束。
      - 如果$s$和$t$都是函数类型，则将它们的组成部分添加为新的约束。
-     - 如果以上情况都不满足，则约束集不可统一，返回`None`。
+     - 如果以上情况都不满足，则约束集不可统一，返回$None$。
 
 **测试示例：**
 
@@ -458,7 +458,7 @@ $$
 
 **题目：**
 
-将练习22.3.10和22.4.6中的约束生成和统一算法结合起来，构建一个计算主要类型的类型检查器，以`reconbase`检查器为起点。一个典型的与类型检查器的交互可能如下所示：
+将练习22.3.10和22.4.6中的约束生成和统一算法结合起来，构建一个计算主要类型的类型检查器，以$reconbase$检查器为起点。一个典型的与类型检查器的交互可能如下所示：
 
 ```plaintext
 λx:X. x;
@@ -471,7 +471,7 @@ $$
    : (Bool → Bool) → Bool
 ```
 
-类型变量如`?X0`是自动生成的。
+类型变量如$?X0$是自动生成的。
 
 **解答：**
 
@@ -522,7 +522,7 @@ $$
 
    **代码详解：**
 
-   - **类型检查函数`type_check`**接收一个上下文`gamma`和一个项`t`，返回项的类型（如果可类型化）。
+   - **类型检查函数$type_check$**接收一个上下文$gamma$和一个项$t$，返回项的类型（如果可类型化）。
    - 对于变量，查找其类型。
    - 对于抽象，生成一个新的类型变量，扩展上下文，递归检查主体的类型，然后构造函数类型。
    - 对于应用，生成一个新的类型变量，生成约束$s1 = s2 \to fresh\_var$，调用统一算法求解约束，返回替换后的类型。
@@ -546,11 +546,11 @@ $$
 
    **结果解释：**
 
-   - `term1`的类型为$X \to X$。
-   - `term2`的类型为$(?X0 \to ?X1) \to (Bool \to ?X0) \to ?X1$。
-   - `term3`的类型为$(Bool \to Bool) \to Bool$。
+   - $term1$的类型为$X \to X$。
+   - $term2$的类型为$(?X0 \to ?X1) \to (Bool \to ?X0) \to ?X1$。
+   - $term3$的类型为$(Bool \to Bool) \to Bool$。
 
-   类型变量如`?X0`是自动生成的，表示在类型推导过程中引入的未知类型。
+   类型变量如$?X0$是自动生成的，表示在类型推导过程中引入的未知类型。
 
 ### 22.5.6 练习 [推荐，«««]
 
@@ -576,23 +576,23 @@ $$
 
 **let-多态性的动机：**
 
-考虑以下示例，我们定义并使用一个简单的函数`double`，它将其第一个参数应用两次于其第二个参数：
+考虑以下示例，我们定义并使用一个简单的函数$double$，它将其第一个参数应用两次于其第二个参数：
 
 ```ocaml
 let double = λf:Nat→Nat. λa:Nat. f(f(a)) in
 double (λx:Nat. succ (succ x)) 2;
 ```
 
-由于我们希望将`double`应用于类型为$Nat \to Nat$的函数，因此选择了给它类型$(Nat \to Nat) \to (Nat \to Nat)$的类型注解。
+由于我们希望将$double$应用于类型为$Nat \to Nat$的函数，因此选择了给它类型$(Nat \to Nat) \to (Nat \to Nat)$的类型注解。
 
-我们也可以定义`double`以便将其用于布尔函数：
+我们也可以定义$double$以便将其用于布尔函数：
 
 ```ocaml
 let double = λf:Bool→Bool. λa:Bool. f(f(a)) in
 double (λx:Bool. x) false;
 ```
 
-然而，我们不能将同一个`double`函数同时用于布尔和数值，因为这将导致类型冲突。必须定义两个版本，只有类型注解不同：
+然而，我们不能将同一个$double$函数同时用于布尔和数值，因为这将导致类型冲突。必须定义两个版本，只有类型注解不同：
 
 ```ocaml
 let doubleNat = λf:Nat→Nat. λa:Nat. f(f(a)) in
@@ -602,7 +602,7 @@ let b = doubleBool (λx:Bool. x) false in
 ...
 ```
 
-即使将`double`的参数注解为类型变量：
+即使将$double$的参数注解为类型变量：
 
 ```ocaml
 let double = λf:X→X. λa:X. f(f(a)) in
@@ -617,20 +617,20 @@ let b = double (λx:Bool. x) false in
 
 变量$X$在这里扮演了两个不同的角色：
 
-1. 捕捉了`double`在计算$a$时，第一个参数必须是一个从$Nat$到$Nat$的函数。
-2. 捕捉了`double`在计算$b$时，第一个参数必须是一个从$Bool$到$Bool$的函数。
+1. 捕捉了$double$在计算$a$时，第一个参数必须是一个从$Nat$到$Nat$的函数。
+2. 捕捉了$double$在计算$b$时，第一个参数必须是一个从$Bool$到$Bool$的函数。
 
 由于同一个变量$X$用于两个不同的地方，导致了不合理的约束$Nat \to Nat = Bool \to Bool$，使得整个程序不可类型化。
 
 **解决方案：引入不同的变量**
 
-我们希望每次使用`double`时，分配不同的类型变量给它的参数类型。这可以通过修改`let`的类型规则来实现。
+我们希望每次使用$double$时，分配不同的类型变量给它的参数类型。这可以通过修改$let$的类型规则来实现。
 
 ### 22.7 Let-多态性的详细实现
 
 **步骤：**
 
-1. **更改`let`的类型规则：**
+1. **更改$let$的类型规则：**
 
    - **原始类型规则：**
    
@@ -655,7 +655,7 @@ let b = double (λx:Bool. x) false in
 
 2. **修改约束类型规则（图22-1）：**
 
-   - 添加`CT-LetPoly`规则，与`T-LetPoly`对应：
+   - 添加$CT-LetPoly$规则，与$T-LetPoly$对应：
    
      ```plaintext
      Γ ⊢ [x := t1]t2 : T2 | X C
@@ -666,12 +666,12 @@ let b = double (λx:Bool. x) false in
 
 3. **利用类型重建和统一算法：**
 
-   - 通过`CT-LetPoly`，对于每一个`let`绑定，生成独立的类型变量，避免类型变量在不同上下文中混用。
+   - 通过$CT-LetPoly$，对于每一个$let$绑定，生成独立的类型变量，避免类型变量在不同上下文中混用。
    - 统一算法保证类型变量的一致性和合理性。
 
 4. **示例修改：**
 
-   将`double`的定义改为使用隐式类型注解：
+   将$double$的定义改为使用隐式类型注解：
 
    ```ocaml
    let double = λf. λa. f(f(a)) in
@@ -680,13 +680,13 @@ let b = double (λx:Bool. x) false in
    ...
    ```
 
-   通过`CT-LetPoly`和`CT-AbsInf`（隐式注解的抽象规则），每个`double`的使用会生成不同的类型变量，避免了类型冲突。
+   通过$CT-LetPoly$和$CT-AbsInf$（隐式注解的抽象规则），每个$double$的使用会生成不同的类型变量，避免了类型冲突。
 
 **解决步骤总结：**
 
-- **类型规则修改：** 改变`let`的类型规则，使其在类型检查时替换项而不是直接绑定类型。
-- **约束类型规则添加：** 增加`CT-LetPoly`，对应新的`T-LetPoly`类型规则。
-- **类型变量分配：** 每次使用`let`时，生成新的类型变量，确保多态性。
+- **类型规则修改：** 改变$let$的类型规则，使其在类型检查时替换项而不是直接绑定类型。
+- **约束类型规则添加：** 增加$CT-LetPoly$，对应新的$T-LetPoly$类型规则。
+- **类型变量分配：** 每次使用$let$时，生成新的类型变量，确保多态性。
 - **统一算法应用：** 使用统一算法解决生成的约束，得到主要统一器和主要类型。
 
 ### 22.7.1 练习 [««« 3]
@@ -697,7 +697,7 @@ let b = double (λx:Bool. x) false in
 
 **解答：**
 
-以下是基于前述步骤的OCaml代码示例，扩展了类型检查器以支持`let`-多态性。
+以下是基于前述步骤的OCaml代码示例，扩展了类型检查器以支持$let$-多态性。
 
 ```ocaml
 (* 定义类型 *)
@@ -832,33 +832,33 @@ let () =
 **代码详解：**
 
 1. **类型定义：**
-   - `ty`：扩展了类型定义，加入了`TyForall`表示通用类型，用于表示多态性。
+   - $ty$：扩展了类型定义，加入了$TyForall$表示通用类型，用于表示多态性。
    
 2. **统一算法：**
-   - 与前面的统一算法类似，但增加了对`TyForall`的处理。
+   - 与前面的统一算法类似，但增加了对$TyForall$的处理。
    
 3. **类型变量生成器：**
-   - 使用一个计数器生成唯一的类型变量名，如`X0`，`X1`等。
+   - 使用一个计数器生成唯一的类型变量名，如$X0$，$X1$等。
 
 4. **类型检查器：**
    - **变量（Var）：** 从上下文中查找变量的类型。
    - **抽象（Abs）：** 为参数生成新的类型变量，扩展上下文，递归检查主体的类型，构造函数类型。
    - **应用（App）：** 生成新的类型变量，生成约束$s1 = s2 \to fresh\_ty\_var$，调用统一算法求解约束，返回替换后的类型。
    - **Let绑定（Let）：** 
-     - 检查右侧绑定项`t1`的类型。
+     - 检查右侧绑定项$t1$的类型。
      - 生成通用类型（这里简化处理，实际需要实现通用化）。
-     - 扩展上下文，递归检查主体`t2`的类型。
+     - 扩展上下文，递归检查主体$t2$的类型。
 
 5. **测试示例：**
 
-   - **`term1`**：$\lambda x : X.\ x$，类型为$X \to X$。
-   - **`term2`**：$\lambda z : ZZ.\ \lambda y : YY.\ z\ (y\ true)$，类型为$(ZZ \to (?X0 \to ?X1)) \to (YY \to (?X0 \to ?X1))$。
-   - **`term3`**：带有条件的抽象，需要实现`If`构造（此处简化）。
+   - **$term1$**：$\lambda x : X.\ x$，类型为$X \to X$。
+   - **$term2$**：$\lambda z : ZZ.\ \lambda y : YY.\ z\ (y\ true)$，类型为$(ZZ \to (?X0 \to ?X1)) \to (YY \to (?X0 \to ?X1))$。
+   - **$term3$**：带有条件的抽象，需要实现$If$构造（此处简化）。
 
 **注意：**
 
 - 该实现是一个简化示例，实际的类型检查器需要处理通用化、类型变量的管理、更多类型构造（如记录类型）等复杂情况。
-- `TyForall`用于表示多态类型，但在本示例中未完全实现通用化过程。
+- $TyForall$用于表示多态类型，但在本示例中未完全实现通用化过程。
 
 ### 22.5.6 练习 [推荐，«««]
 
@@ -868,13 +868,13 @@ let () =
 
 **解答：**
 
-上面的OCaml代码示例展示了如何结合约束生成和统一算法，实现一个基本的类型检查器，该类型检查器支持`let`-多态性。为了完整实现该算法，还需处理以下内容：
+上面的OCaml代码示例展示了如何结合约束生成和统一算法，实现一个基本的类型检查器，该类型检查器支持$let$-多态性。为了完整实现该算法，还需处理以下内容：
 
 1. **通用化（Generalization）：**
-   - 在`let`绑定中，将不在上下文中的类型变量进行通用化，生成`TyForall`类型。
+   - 在$let$绑定中，将不在上下文中的类型变量进行通用化，生成$TyForall$类型。
    
 2. **实例化（Instantiation）：**
-   - 在使用`let`绑定的变量时，将通用类型中的类型变量实例化为新的类型变量。
+   - 在使用$let$绑定的变量时，将通用类型中的类型变量实例化为新的类型变量。
    
 3. **错误处理：**
    - 提供详细的错误信息，指出类型不匹配的位置和原因。
@@ -925,7 +925,7 @@ let () =
 
 **总结：**
 
-本章深入探讨了类型重建的理论基础和实践实现，展示了如何通过约束生成和统一算法为缺失类型注解的项推导出主要类型。通过引入多态性和处理`let`绑定，我们实现了更加灵活和强大的类型系统。尽管存在一些复杂性和性能挑战，但这些理论基础为现代编程语言的类型系统设计提供了坚实的支持。
+本章深入探讨了类型重建的理论基础和实践实现，展示了如何通过约束生成和统一算法为缺失类型注解的项推导出主要类型。通过引入多态性和处理$let$绑定，我们实现了更加灵活和强大的类型系统。尽管存在一些复杂性和性能挑战，但这些理论基础为现代编程语言的类型系统设计提供了坚实的支持。
 
 ---
 
@@ -1333,8 +1333,8 @@ type constr = (ty * ty) list
 
 **代码片段解释：**
 
-- `uvargen`函数生成形如`?X_n`的新鲜类型变量名。
-- 它使用递归，每次生成一个新变量时递增计数器`n`。
+- $uvargen$函数生成形如$?X_n$的新鲜类型变量名。
+- 它使用递归，每次生成一个新变量时递增计数器$n$。
 
 ---
 
@@ -1698,7 +1698,7 @@ $$
 #### 练习 22.5.5
 
 **题目**  
-将你对练习 22.3.10 和 22.4.6 的解答结合起来，从 `reconbase` 检查器开始，构建一个计算主类型的类型检查器。类型检查器的典型交互可能如下：
+将你对练习 22.3.10 和 22.4.6 的解答结合起来，从 $reconbase$ 检查器开始，构建一个计算主类型的类型检查器。类型检查器的典型交互可能如下：
 
 ```
 λx:X. x;
@@ -1711,14 +1711,14 @@ $$
 — <fun> : (Bool → Bool) → Bool
 ```
 
-其中像 `?X0` 这样的类型变量是自动生成的。
+其中像 $?X0$ 这样的类型变量是自动生成的。
 
 **解答**
 
 - **实现思路**
 
   - 扩展之前的类型检查器，使其在类型推导过程中生成和显示主类型。
-  - 当遇到未确定的类型变量时，用占位符（如 `?X0`）表示。
+  - 当遇到未确定的类型变量时，用占位符（如 $?X0$）表示。
   - 在输出中显示项的主类型。
 
 - **关键步骤**
@@ -1726,7 +1726,7 @@ $$
   1. **约束生成**：遍历抽象语法树，生成类型约束。
   2. **合一求解**：使用合一算法求解约束集，得到最一般的替换。
   3. **应用替换**：将替换应用到初始类型中，得到主类型。
-  4. **类型变量展示**：为未绑定的类型变量生成易于阅读的名称，如 `?X0`。
+  4. **类型变量展示**：为未绑定的类型变量生成易于阅读的名称，如 $?X0$。
 
 - **注意**
 
@@ -1802,7 +1802,7 @@ let a = double (λx:Nat. succ (succ x)) 1 in
 let b = double (λx:Bool. x) false in ...
 ```
 
-- 使用新的规则，每次使用 `double` 时，都会生成新的类型变量，使其可以适用于不同的类型。
+- 使用新的规则，每次使用 $double$ 时，都会生成新的类型变量，使其可以适用于不同的类型。
 
 ---
 
@@ -1834,15 +1834,15 @@ let b = double (λx:Bool. x) false in ...
 
 **动机示例**
 
-- 定义一个函数 `double`，使其可以适用于不同类型的函数。
+- 定义一个函数 $double$，使其可以适用于不同类型的函数。
 
 - **问题**
 
-  - 如果直接定义 `double`，其类型被固定，无法适用于不同类型。
+  - 如果直接定义 $double$，其类型被固定，无法适用于不同类型。
 
 - **解决方法**
 
-  - 使用隐式类型注释和新的 let 类型规则，使得 `double` 可以在不同的上下文中具有不同的类型。
+  - 使用隐式类型注释和新的 let 类型规则，使得 $double$ 可以在不同的上下文中具有不同的类型。
 
 ---
 
