--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第23章 全称类型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第23章 全称类型.md
@@ -75,7 +75,7 @@
 - 这些类别并不互斥：不同形式的多态性可以在同一语言中混合使用。
 - 例如：
   - **Standard ML** 提供参数化多态性和内置算术操作的简单重载，但不支持子类型。
-  - **Java** 包含子类型、多态、简单的特殊多态性（如 `instanceof`），但在撰写本文时并不支持参数化多态性（有几个为 Java 添加参数化多态性的提案，如 GJ）。
+  - **Java** 包含子类型、多态、简单的特殊多态性（如 $instanceof$），但在撰写本文时并不支持参数化多态性（有几个为 Java 添加参数化多态性的提案，如 GJ）。
 
 **术语混淆**
 
@@ -709,12 +709,12 @@ $$
 
   - **注释与解释**
 
-    - **递归函数** `rev`：接受一个列表 `l`，返回其反转的列表。
-    - **基本情况**：如果 `l` 为空，返回空列表。
+    - **递归函数** $rev$：接受一个列表 $l$，返回其反转的列表。
+    - **基本情况**：如果 $l$ 为空，返回空列表。
     - **递归情况**：
-      - 获取列表的头部 `h` 和尾部 `t`。
-      - 递归地反转尾部列表 `rev_t = rev t`。
-      - 将头部 `h` 添加到 `rev_t` 的末尾。
+      - 获取列表的头部 $h$ 和尾部 $t$。
+      - 递归地反转尾部列表 $rev_t = rev t$。
+      - 将头部 $h$ 添加到 $rev_t$ 的末尾。
 
 - **定义辅助函数 $\text{append}$**
 
@@ -728,7 +728,7 @@ $$
     );
   ```
 
-  - **作用**：将两个列表 `l1` 和 `l2` 连接起来。
+  - **作用**：将两个列表 $l1$ 和 $l2$ 连接起来。
 
 - **完整类型**
 
@@ -783,8 +783,8 @@ $$
 
   - **注释与解释**
 
-    - **插入函数** `insert`：将元素 `x` 按照比较函数 `cmp` 插入到列表 `l` 中合适的位置。
-    - **排序函数** `sort`：递归地排序列表 `l`。
+    - **插入函数** $insert$：将元素 $x$ 按照比较函数 $cmp$ 插入到列表 $l$ 中合适的位置。
+    - **排序函数** $sort$：递归地排序列表 $l$。
 
 - **完整类型**
 
