--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第24章 存在类型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第24章 存在类型.md
@@ -78,7 +78,7 @@ $$
 
 - **类型**：$p1 : \{\exists X,\ \{a:X,\ f:X \to \text{Nat}\}\}$
 
-这里，关键是通过 `as` 引入的类型注释，类似于我们在 §11.4 中引入的类型说明（ascription）构造，它允许任何项都可以用其预期类型进行注释。我们基本上是将单个类型说明作为包构造的具体语法的一部分。
+这里，关键是通过 $as$ 引入的类型注释，类似于我们在 §11.4 中引入的类型说明（ascription）构造，它允许任何项都可以用其预期类型进行注释。我们基本上是将单个类型说明作为包构造的具体语法的一部分。
 
 **存在类型的引入规则**
 
@@ -184,7 +184,7 @@ $$
 
 **消除形式**
 
-存在类型的消除构造可以通过与模块的类比来获得有益的直觉。如果一个存在包对应于一个模块，那么包的消除就像一个 `open` 或 `import` 指令：它允许模块的组件在程序的其他部分中使用，但保持其类型组件的身份是抽象的。这可以通过一种模式匹配绑定来实现：
+存在类型的消除构造可以通过与模块的类比来获得有益的直觉。如果一个存在包对应于一个模块，那么包的消除就像一个 $open$ 或 $import$ 指令：它允许模块的组件在程序的其他部分中使用，但保持其类型组件的身份是抽象的。这可以通过一种模式匹配绑定来实现：
 
 $$
 \frac{\Gamma \vdash t_1 : \{\exists X, T_{12}\} \quad \Gamma, X, x:T_{12} \vdash t_2 : T_2}{\Gamma \vdash \text{let}\ \{X, x\} = t_1\ \text{in}\ t_2 : T_2} \quad (\text{T-Unpack})
@@ -194,7 +194,7 @@ $$
 
   - 如果 $t_1$ 是一个产生存在包的表达式，那么我们可以将其类型和项组件分别绑定到模式变量 $X$ 和 $x$，并在计算 $t_2$ 时使用它们。
 
-  - **注意**：另一种常见的存在消除的具体语法是 `open t1 as {X, x} in t2`。
+  - **注意**：另一种常见的存在消除的具体语法是 $open t1 as {X, x} in t2$。
 
 **示例**
 
@@ -226,7 +226,7 @@ $$
   \text{let}\ \{X, x\} = p4\ \text{in}\ \text{succ}(x.a);
   $$
 
-  - **错误**：`Error: argument of succ is not a number`
+  - **错误**：$Error: argument of succ is not a number$
 
 - **解释**：
 
@@ -246,7 +246,7 @@ $$
   \text{let}\ \{X, x\} = p\ \text{in}\ x.a;
   $$
 
-  - **错误**：`Error: Scoping error!`
+  - **错误**：$Error: Scoping error!$
 
 - **解释**：
 
@@ -264,7 +264,7 @@ $$
 
 - **解释**：
 
-  - 如果 `let` 的第一个子表达式已经归约为一个具体的包，那么我们可以将这个包的组件替换为主体 $t_2$ 中的变量 $X$ 和 $x$。
+  - 如果 $let$ 的第一个子表达式已经归约为一个具体的包，那么我们可以将这个包的组件替换为主体 $t_2$ 中的变量 $X$ 和 $x$。
 
   - 从模块的类比来看，这个规则可以被视为一个链接步骤，其中引用模块组件的符号名称（$X$ 和 $x$）被模块的实际内容替换。
 
@@ -439,25 +439,25 @@ counter.get (counter.inc counter.new);
 
 - **解释**：
 
-  - **类型名称**：`Counter`。
+  - **类型名称**：$Counter$。
 
-  - **具体表示类型**：`Nat`（自然数）。
+  - **具体表示类型**：$Nat$（自然数）。
 
   - **操作签名**：
 
-    - `new : Counter`：创建一个新的计数器。
+    - $new : Counter$：创建一个新的计数器。
 
-    - `get : Counter → Nat`：获取计数器的当前值。
+    - $get : Counter → Nat$：获取计数器的当前值。
 
-    - `inc : Counter → Counter`：返回计数器递增后的新计数器。
+    - $inc : Counter → Counter$：返回计数器递增后的新计数器。
 
   - **操作实现**：
 
-    - `new = 1`：计数器的初始值为 1。
+    - $new = 1$：计数器的初始值为 1。
 
-    - `get = λi:Nat. i`：返回计数器的值。
+    - $get = λi:Nat. i$：返回计数器的值。
 
-    - `inc = λi:Nat. succ(i)`：返回计数器值的后继。
+    - $inc = λi:Nat. succ(i)$：返回计数器值的后继。
 
 - **使用示例**：
 
@@ -465,15 +465,15 @@ counter.get (counter.inc counter.new);
   counter.get (counter.inc counter.new);
   ```
 
-  - **结果**：`2`
+  - **结果**：$2$
 
 - **解释**：
 
-  - `counter.new` 创建一个新的计数器，值为 1。
+  - $counter.new$ 创建一个新的计数器，值为 1。
 
-  - `counter.inc counter.new` 对计数器递增，得到值为 2 的新计数器。
+  - $counter.inc counter.new$ 对计数器递增，得到值为 2 的新计数器。
 
-  - `counter.get` 获取计数器的值，返回 2。
+  - $counter.get$ 获取计数器的值，返回 2。
 
 ---
 
@@ -495,7 +495,7 @@ counter.get (counter.inc counter.new);
 
       - **项组件**：包含操作实现的记录。
 
-    - 我们使用 `as` 关键字指定了包的存在类型：
+    - 我们使用 $as$ 关键字指定了包的存在类型：
 
       - $\{ \exists \text{Counter},\ \{ \text{new} : \text{Counter},\ \text{get} : \text{Counter} \to \text{Nat},\ \text{inc} : \text{Counter} \to \text{Counter} \} \}$
 
@@ -505,21 +505,21 @@ counter.get (counter.inc counter.new);
   \text{let}\ \{ \text{Counter},\ \text{counter} \} = \text{counterADT}\ \text{in}\ \text{counter.get}\ (\text{counter.inc}\ \text{counter.new});
   $$
 
-  - **结果**：`2`
+  - **结果**：$2$
 
 - **解释**：
 
-  - 我们使用 `let` 打开存在包 `counterADT`，引入类型变量 `Counter` 和项变量 `counter`。
+  - 我们使用 $let$ 打开存在包 $counterADT$，引入类型变量 $Counter$ 和项变量 $counter$。
 
-  - 在 `let` 的主体中，我们可以使用 `Counter` 作为类型，`counter` 提供了操作的抽象访问。
+  - 在 $let$ 的主体中，我们可以使用 $Counter$ 作为类型，$counter$ 提供了操作的抽象访问。
 
-  - 我们调用 `counter.new` 创建计数器，`counter.inc` 对计数器递增，`counter.get` 获取计数器的值。
+  - 我们调用 $counter.new$ 创建计数器，$counter.inc$ 对计数器递增，$counter.get$ 获取计数器的值。
 
 ---
 
 **定义使用计数器的函数**
 
-- 我们可以在 `let` 的主体中定义操作计数器的函数，例如：
+- 我们可以在 $let$ 的主体中定义操作计数器的函数，例如：
 
   $$
   \text{let}\ \{ \text{Counter},\ \text{counter} \} = \text{counterADT}\ \text{in}\ \\
@@ -527,13 +527,13 @@ counter.get (counter.inc counter.new);
   \quad \text{counter.get}\ (\text{add3}\ \text{counter.new});
   $$
 
-  - **结果**：`4`
+  - **结果**：$4$
 
 - **解释**：
 
-  - 定义函数 `add3`，对计数器递增三次。
+  - 定义函数 $add3$，对计数器递增三次。
 
-  - 使用 `counter.get` 获取结果计数器的值。
+  - 使用 $counter.get$ 获取结果计数器的值。
 
 ---
 
@@ -553,25 +553,25 @@ counter.get (counter.inc counter.new);
   \quad \text{in}\ \text{flipflop.read}\ (\text{flipflop.toggle}\ (\text{flipflop.toggle}\ \text{flipflop.new}));
   $$
 
-  - **结果**：`false`
+  - **结果**：$false$
 
 - **解释**：
 
-  - 使用 `counterADT` 定义了一个新的 ADT `flipflop`。
+  - 使用 $counterADT$ 定义了一个新的 ADT $flipflop$。
 
-  - `flipflop` 的表示类型是 `Counter`。
+  - $flipflop$ 的表示类型是 $Counter$。
 
   - 实现了以下操作：
 
-    - `new`：创建新的触发器。
+    - $new$：创建新的触发器。
 
-    - `read`：读取当前状态，使用 `iseven` 检查计数器值是否为偶数。
+    - $read$：读取当前状态，使用 $iseven$ 检查计数器值是否为偶数。
 
-    - `toggle`：切换状态，使用 `counter.inc` 递增计数器。
+    - $toggle$：切换状态，使用 $counter.inc$ 递增计数器。
 
-    - `reset`：重置触发器。
+    - $reset$：重置触发器。
 
-  - 在 `let` 的主体中，我们创建一个新的触发器，调用 `toggle` 两次，然后读取状态，结果为 `false`。
+  - 在 $let$ 的主体中，我们创建一个新的触发器，调用 $toggle$ 两次，然后读取状态，结果为 $false$。
 
 ---
 
@@ -583,13 +583,13 @@ counter.get (counter.inc counter.new);
 
   - 我们可以替换 ADT 的实现，而不会影响程序的其余部分。
 
-  - 例如，将 `Counter` 的内部表示从 `Nat` 改为包含 `Nat` 的记录：
+  - 例如，将 $Counter$ 的内部表示从 $Nat$ 改为包含 $Nat$ 的记录：
 
     $$
     \text{counterADT} = \{^*\{ x : \text{Nat} \},\ \{ \text{new} = \{ x = 1 \},\ \text{get} = \lambda i:\{ x : \text{Nat} \}.\ i.x,\ \text{inc} = \lambda i:\{ x : \text{Nat} \}.\ \{ x = \text{succ}(i.x) \} \} \}\ \text{as}\ \{ \exists \text{Counter},\ \{ \text{new} : \text{Counter},\ \text{get} : \text{Counter} \to \text{Nat},\ \text{inc} : \text{Counter} \to \text{Counter} \} \};
     $$
 
-  - 程序仍然类型安全，其他部分无法访问 `Counter` 的内部表示。
+  - 程序仍然类型安全，其他部分无法访问 $Counter$ 的内部表示。
 
 ---
 
@@ -609,17 +609,17 @@ counter.get (counter.inc counter.new);
 
 按照上述示例的模型，定义一个数字栈（stack of numbers）的抽象数据类型，具有以下操作：
 
-- `new`：创建新的栈。
+- $new$：创建新的栈。
 
-- `push`：将元素压入栈。
+- $push$：将元素压入栈。
 
-- `top`：返回栈顶元素。
+- $top$：返回栈顶元素。
 
-- `pop`：返回没有栈顶元素的新栈。
+- $pop$：返回没有栈顶元素的新栈。
 
-- `isempty`：检查栈是否为空。
+- $isempty$：检查栈是否为空。
 
-使用练习 23.4.3 中引入的 `List` 类型作为底层表示。编写一个简单的主程序，创建一个栈，向其中压入几个数字，并获取其栈顶元素。
+使用练习 23.4.3 中引入的 $List$ 类型作为底层表示。编写一个简单的主程序，创建一个栈，向其中压入几个数字，并获取其栈顶元素。
 
 **解答**
 
@@ -643,19 +643,19 @@ counter.get (counter.inc counter.new);
 
 - **解释**：
 
-  - **表示类型**：使用 `List Nat` 作为栈的底层表示。
+  - **表示类型**：使用 $List Nat$ 作为栈的底层表示。
 
   - **操作实现**：
 
-    - `new`：空列表 `nil`。
+    - $new$：空列表 $nil$。
 
-    - `push`：将元素 `n` 添加到栈 `s`，使用 `cons`。
+    - $push$：将元素 $n$ 添加到栈 $s$，使用 $cons$。
 
-    - `top`：获取栈顶元素，使用 `head`，如果为空则返回默认值 `0`。
+    - $top$：获取栈顶元素，使用 $head$，如果为空则返回默认值 $0$。
 
-    - `pop`：移除栈顶元素，使用 `tail`。
+    - $pop$：移除栈顶元素，使用 $tail$。
 
-    - `isempty`：检查栈是否为空，使用 `isnil`。
+    - $isempty$：检查栈是否为空，使用 $isnil$。
 
 - **使用栈的主程序**
 
@@ -666,17 +666,17 @@ counter.get (counter.inc counter.new);
   \quad \text{stack.top}\ s2;
   $$
 
-  - **结果**：`20`
+  - **结果**：$20$
 
 - **解释**：
 
-  - 创建一个新的栈 `stack.new`。
+  - 创建一个新的栈 $stack.new$。
 
-  - 将数字 `10` 压入栈，得到 `s1`。
+  - 将数字 $10$ 压入栈，得到 $s1$。
 
-  - 将数字 `20` 压入栈，得到 `s2`。
+  - 将数字 $20$ 压入栈，得到 $s2$。
 
-  - 获取栈顶元素 `stack.top s2`，结果为 `20`。
+  - 获取栈顶元素 $stack.top s2$，结果为 $20$。
 
 ---
 
@@ -710,39 +710,39 @@ counter.get (counter.inc counter.new);
 
   - **解释**：
 
-    - **类型组件**：`Nat`，作为计数器的内部状态类型。
+    - **类型组件**：$Nat$，作为计数器的内部状态类型。
 
     - **项组件**：包含状态和方法的记录。
 
-- **发送 `get` 消息**
+- **发送 $get$ 消息**
 
   $$
   \text{let}\ \{ X,\ \text{body} \} = c\ \text{in}\ \text{body.methods.get}\ (\text{body.state});
   $$
 
-  - **结果**：`5`
+  - **结果**：$5$
 
-- **定义发送 `get` 消息的函数**
+- **定义发送 $get$ 消息的函数**
 
   $$
   \text{sendget} = \lambda c:\text{Counter}.\ \\
   \quad \text{let}\ \{ X,\ \text{body} \} = c\ \text{in}\ \text{body.methods.get}\ (\text{body.state});
   $$
 
-  - **类型**：`sendget : Counter → Nat`
+  - **类型**：$sendget : Counter → Nat$
 
-- **发送 `inc` 消息**
+- **发送 $inc$ 消息**
 
-  - **问题**：直接发送 `inc` 会导致作用域错误，因为结果类型中包含了类型变量 `X`。
+  - **问题**：直接发送 $inc$ 会导致作用域错误，因为结果类型中包含了类型变量 $X$。
 
-  - **解决**：在 `inc` 后重新封装新的计数器对象：
+  - **解决**：在 $inc$ 后重新封装新的计数器对象：
 
     $$
     c1 = \text{let}\ \{ X,\ \text{body} \} = c\ \text{in}\ \\
     \quad \{^* X,\ \{ \text{state} = \text{body.methods.inc}\ (\text{body.state}),\ \text{methods} = \text{body.methods} \} \}\ \text{as}\ \text{Counter};
     $$
 
-- **定义发送 `inc` 消息的函数**
+- **定义发送 $inc$ 消息的函数**
 
   $$
   \text{sendinc} = \lambda c:\text{Counter}.\ \\
@@ -750,7 +750,7 @@ counter.get (counter.inc counter.new);
   \quad \{^* X,\ \{ \text{state} = \text{body.methods.inc}\ (\text{body.state}),\ \text{methods} = \text{body.methods} \} \}\ \text{as}\ \text{Counter};
   $$
 
-  - **类型**：`sendinc : Counter → Counter`
+  - **类型**：$sendinc : Counter → Counter$
 
 - **定义组合操作**
 
@@ -758,7 +758,7 @@ counter.get (counter.inc counter.new);
   \text{add3} = \lambda c:\text{Counter}.\ \text{sendinc}\ (\text{sendinc}\ (\text{sendinc}\ c));
   $$
 
-  - **类型**：`add3 : Counter → Counter`
+  - **类型**：$add3 : Counter → Counter$
 
 ---
 
@@ -766,17 +766,17 @@ counter.get (counter.inc counter.new);
 
 **题目**
 
-使用 `Counter` 对象作为内部表示类型，实现 `FlipFlop` 对象，参考之前的 `FlipFlop` ADT。
+使用 $Counter$ 对象作为内部表示类型，实现 $FlipFlop$ 对象，参考之前的 $FlipFlop$ ADT。
 
 **解答**
 
-- **定义 `FlipFlop` 对象类型**
+- **定义 $FlipFlop$ 对象类型**
 
   $$
   \text{FlipFlop} = \{ \exists X,\ \{ \text{state} : X,\ \text{methods} : \{ \text{read} : X \to \text{Bool},\ \text{toggle} : X \to X,\ \text{reset} : X \to X \} \} \};
   $$
 
-- **创建一个 `FlipFlop` 对象**
+- **创建一个 $FlipFlop$ 对象**
 
   $$
   \text{flipflop} = \text{let}\ \{ X,\ \text{counter} \} = \text{counterADT}\ \text{in}\ \\
@@ -787,14 +787,14 @@ counter.get (counter.inc counter.new);
   \} \} \}\ \text{as}\ \text{FlipFlop};
   $$
 
-- **定义发送 `read` 消息的函数**
+- **定义发送 $read$ 消息的函数**
 
   $$
   \text{sendread} = \lambda f:\text{FlipFlop}.\ \\
   \quad \text{let}\ \{ X,\ \text{body} \} = f\ \text{in}\ \text{body.methods.read}\ (\text{body.state});
   $$
 
-- **定义发送 `toggle` 消息的函数**
+- **定义发送 $toggle$ 消息的函数**
 
   $$
   \text{sendtoggle} = \lambda f:\text{FlipFlop}.\ \\
@@ -802,13 +802,13 @@ counter.get (counter.inc counter.new);
   \quad \{^* X,\ \{ \text{state} = \text{body.methods.toggle}\ (\text{body.state}),\ \text{methods} = \text{body.methods} \} \}\ \text{as}\ \text{FlipFlop};
   $$
 
-- **使用 `FlipFlop` 对象**
+- **使用 $FlipFlop$ 对象**
 
   $$
   \text{let}\ f1 = \text{sendtoggle}\ (\text{sendtoggle}\ \text{flipflop})\ \text{in}\ \text{sendread}\ f1;
   $$
 
-  - **结果**：`false`
+  - **结果**：$false$
 
 ---
 
@@ -818,9 +818,9 @@ counter.get (counter.inc counter.new);
 
 - **封装方式**：
 
-  - **ADT 风格**：包在构建后立即打开，抽象类型由 `let` 引入的类型变量表示。
+  - **ADT 风格**：包在构建后立即打开，抽象类型由 $let$ 引入的类型变量表示。
 
-  - **对象风格**：包保持封闭，直到需要使用其方法时才打开，类型 `Counter` 表示整个存在类型。
+  - **对象风格**：包保持封闭，直到需要使用其方法时才打开，类型 $Counter$ 表示整个存在类型。
 
 - **运行时表示**
 
@@ -882,11 +882,11 @@ $$
 
 - **原因**：
 
-  - 在该类型中，`union` 的类型是 `X → X → X`，需要对两个参数的表示类型 `X` 进行具体访问。
+  - 在该类型中，$union$ 的类型是 $X → X → X$，需要对两个参数的表示类型 $X$ 进行具体访问。
 
-  - 但是，在存在类型中，`X` 是抽象的，无法保证两个 `X` 实际上是相同的具体类型。
+  - 但是，在存在类型中，$X$ 是抽象的，无法保证两个 $X$ 实际上是相同的具体类型。
 
-  - 当我们试图在对象模型中实现 `union` 时，无法确保两个 `X` 是相同的表示类型，因此无法访问它们的具体表示。
+  - 当我们试图在对象模型中实现 $union$ 时，无法确保两个 $X$ 是相同的表示类型，因此无法访问它们的具体表示。
 
 - **结论**：
 
@@ -978,7 +978,7 @@ $$
 
 ##### 存在类型的解包（Unpacking）
 
-解包操作将存在包中的类型和值提取出来，并在上下文中使用它们。根据编码公式，解包 `let {X, x} = t1 in t2` 的过程如下：
+解包操作将存在包中的类型和值提取出来，并在上下文中使用它们。根据编码公式，解包 $let {X, x} = t1 in t2$ 的过程如下：
 
 $$
 \frac{}{\text{let}\ \{X, x\} = t1\ \text{in}\ t2 \quad \text{def} = t1 [T2] (\lambda X. \lambda x: T11. t2 )}
@@ -1141,7 +1141,7 @@ $$
 
    - **打包操作的正确性**：证明 $\{^*S, t\} \text{as} \{\exists X, T\} \text{def}$ 的编码确实能够封装类型 $S$ 和值 $t$。
    
-   - **解包操作的正确性**：证明 `let {X, x} = t1 in t2` 的编码能够正确地提取类型 $X$ 和值 $x$，并在表达式 $t2$ 中使用它们。
+   - **解包操作的正确性**：证明 $let {X, x} = t1 in t2$ 的编码能够正确地提取类型 $X$ 和值 $x$，并在表达式 $t2$ 中使用它们。
 
 4. **行为一致性（Behavioral Consistency）**
 
