--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第26章 圈量词.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第26章 圈量词.md
@@ -468,7 +468,7 @@ $$
 
 - **$pair$**：一个函数，接受类型参数 $X$ 和 $Y$，以及对应类型的值 $x$ 和 $y$，返回一个符合 $\text{Pair}\ X\ Y$ 类型的值。
 
-- **类型断言** `as Pair X Y`：将一个表达式的类型显式指定为 `Pair X Y`，以帮助类型检查器理解类型。
+- **类型断言** $as Pair X Y$：将一个表达式的类型显式指定为 $Pair X Y$，以帮助类型检查器理解类型。
 
 **定义 $fst$（第一个元素）和 $snd$（第二个元素）：**
 
@@ -500,7 +500,7 @@ $$
 
   - 接受一个参数 $p$，类型为 $\text{Pair}\ X\ Y$。
 
-  - 应用 $p$，传入类型参数 $[X]$，以及函数 `λx:X. λy:Y. x`，返回第一个元素 $x$。
+  - 应用 $p$，传入类型参数 $[X]$，以及函数 $λx:X. λy:Y. x$，返回第一个元素 $x$。
 
 - **$snd$**：
 
@@ -718,7 +718,7 @@ $$
   \{t_i\}_{i \in 1..n} \overset{\text{def}}{=} \text{pair } t_1\, (\text{pair } t_2\, (...\, (\text{pair } t_n\, \text{top})...))
   $$
 
-  这里，为了简洁，我们省略了 `pair` 的类型参数。$\text{top}$ 是 $\text{Top}$ 类型的任意元素，即任意闭合、良类型的项。
+  这里，为了简洁，我们省略了 $pair$ 的类型参数。$\text{top}$ 是 $\text{Top}$ 类型的任意元素，即任意闭合、良类型的项。
 
 - **投影操作**：
 
@@ -733,7 +733,7 @@ $$
 #### 解释：
 
 - **灵活性**：这些元组被称为“灵活”的，因为在子类型关系中，它们可以在右侧进行扩展，这区别于普通的元组。
-- **构造方式**：通过嵌套的 `Pair` 类型和 `pair` 值来构造灵活元组，其中最内层的类型或值是 $\text{Top}$ 或 $\text{top}$。
+- **构造方式**：通过嵌套的 $Pair$ 类型和 $pair$ 值来构造灵活元组，其中最内层的类型或值是 $\text{Top}$ 或 $\text{top}$。
 
 #### 子类型和类型规则
 
@@ -962,7 +962,7 @@ $$
 
 #### 类型的多态性
 
-希望有一个单一的 `plus` 函数，其类型能够涵盖所有可能性，例如：
+希望有一个单一的 $plus$ 函数，其类型能够涵盖所有可能性，例如：
 
 $$
 \text{plus} :
@@ -978,7 +978,7 @@ $$
 
 ### 习题 26.3.5
 
-**要求**：按照 $\text{SNat}$ 的模型，推广丘奇布尔类型 $\text{CBool}$ 为 $\text{SBool}$，并定义两个子类型 $\text{STrue}$ 和 $\text{SFalse}$。编写类型为 $\text{SFalse} \to \text{STrue}$ 的函数 `\text{notft}`，以及类型为 $\text{STrue} \to \text{SFalse}$ 的函数 `\text{nottf}`。
+**要求**：按照 $\text{SNat}$ 的模型，推广丘奇布尔类型 $\text{CBool}$ 为 $\text{SBool}$，并定义两个子类型 $\text{STrue}$ 和 $\text{SFalse}$。编写类型为 $\text{SFalse} \to \text{STrue}$ 的函数 $\text{notft}$，以及类型为 $\text{STrue} \to \text{SFalse}$ 的函数 $\text{nottf}$。
 
 **解答**：
 
@@ -1190,7 +1190,7 @@ $$
 
 - **存在类型**：引入了有界存在量化类型，允许我们表示类型的一部分被隐藏起来，只暴露其上界。
 - **子类型规则**：存在类型的子类型关系要求在新的类型变量上下文中比较其内容类型。
-- **类型规则**：`T-Pack` 和 `T-Unpack` 规则描述了如何构造和使用存在类型的值。
+- **类型规则**：$T-Pack$ 和 $T-Unpack$ 规则描述了如何构造和使用存在类型的值。
 
 **总结**：通过引入有界存在量化，我们扩展了 F<: 的表达能力，允许更灵活地表达抽象数据类型和模块化编程。
 
@@ -1228,17 +1228,17 @@ $$
 
 ### 系统 F 中的有界存在类型
 
-在纯粹的系统 F 中，加入记录类型和存在类型（但不包括子类型），我们可以探讨如何为 `{*Nat, {a=5, b=7}}` 选择类型 $T$。
+在纯粹的系统 F 中，加入记录类型和存在类型（但不包括子类型），我们可以探讨如何为 ${*Nat, {a=5, b=7}}$ 选择类型 $T$。
 
 #### 习题 26.5.2
 
-**问题**：在没有子类型的纯系统 F 中，存在记录和存在类型的情况下，有多少种不同的方式可以选择类型 $T$ 使得 `\{*Nat, \{a=5, b=7\}\} as T` 是类型良构的？如果我们添加子类型和有界存在类型，是否会有更多的选择？
+**问题**：在没有子类型的纯系统 F 中，存在记录和存在类型的情况下，有多少种不同的方式可以选择类型 $T$ 使得 $\{*Nat, \{a=5, b=7\}\} as T$ 是类型良构的？如果我们添加子类型和有界存在类型，是否会有更多的选择？
 
 **解答**：
 
 **在纯系统 F 中的情况**：
 
-在没有子类型的系统 F 中，存在类型和记录类型的选择方式主要取决于如何包装记录 `{a=5, b=7}`。具体来说，有以下几种方式：
+在没有子类型的系统 F 中，存在类型和记录类型的选择方式主要取决于如何包装记录 ${a=5, b=7}$。具体来说，有以下几种方式：
 
 1. **直接使用存在类型包装记录**：
    $$
@@ -1287,7 +1287,7 @@ $$
    $$
    并且由于 $Y <: X$，可以进一步利用子类型关系进行类型选择。
 
-因此，添加子类型和有界存在类型后，可以通过不同的边界和子类型关系，选择更多样化的类型 $T$ 来使 `\{*Nat, \{a=5, b=7\}\} as T` 成为类型良构的。
+因此，添加子类型和有界存在类型后，可以通过不同的边界和子类型关系，选择更多样化的类型 $T$ 来使 $\{*Nat, \{a=5, b=7\}\} as T$ 成为类型良构的。
 
 ### 部分抽象类型（Partially Abstract Types）
 
@@ -1295,7 +1295,7 @@ $$
 
 **示例**：
 
-假设我们实现一个计数器的ADT，并为类型注解添加边界 `Counter <: Nat`：
+假设我们实现一个计数器的ADT，并为类型注解添加边界 $Counter <: Nat$：
 
 ```plaintext
 counterADT =
@@ -1318,7 +1318,7 @@ counter.get (counter.inc (counter.inc counter.new));
 ñ 3 : Nat
 ```
 
-此外，现在允许直接将 `Counter` 值作为数字使用：
+此外，现在允许直接将 $Counter$ 值作为数字使用：
 
 ```plaintext
 let {Counter, counter} = counterADT in
@@ -1326,7 +1326,7 @@ succ (succ (counter.inc counter.new));
 ñ 4 : Nat
 ```
 
-然而，仍然无法将数字用作 `Counter`：
+然而，仍然无法将数字用作 $Counter$：
 
 ```plaintext
 let {Counter, counter} = counterADT in
@@ -1336,15 +1336,15 @@ counter.inc 3;
 
 **解释**：
 
-通过有界存在类型，我们选择向外部世界揭示 `Counter` 的表示类型的部分结构（如 `Counter <: Nat`），使得外部可以更方便地使用计数器，同时保持对其内部表示类型的控制和隐藏。
+通过有界存在类型，我们选择向外部世界揭示 $Counter$ 的表示类型的部分结构（如 $Counter <: Nat$），使得外部可以更方便地使用计数器，同时保持对其内部表示类型的控制和隐藏。
 
 #### 习题 26.5.3
 
-**问题**：假设我们希望定义两个抽象数据类型，`Counter` 和 `ResetCounter`，满足以下条件：
+**问题**：假设我们希望定义两个抽象数据类型，$Counter$ 和 $ResetCounter$，满足以下条件：
 
-1. 两个ADT都提供 `new`、`get` 和 `inc` 操作。
-2. `ResetCounter` 额外提供一个 `reset` 操作，该操作接受一个计数器并返回一个设置为某个固定值（例如1）的新计数器。
-3. `ResetCounter` 可以替代 `Counter` 使用（即 `ResetCounter <: Counter`）。
+1. 两个ADT都提供 $new$、$get$ 和 $inc$ 操作。
+2. $ResetCounter$ 额外提供一个 $reset$ 操作，该操作接受一个计数器并返回一个设置为某个固定值（例如1）的新计数器。
+3. $ResetCounter$ 可以替代 $Counter$ 使用（即 $ResetCounter <: Counter$）。
 4. 对于客户端，关于计数器和重置计数器的表示方式没有更多的揭示。
 
 是否可以使用有界存在类型包来实现这一目标？
@@ -1353,9 +1353,9 @@ counter.inc 3;
 
 **解决方案**：
 
-我们可以利用有界存在类型包来定义 `Counter` 和 `ResetCounter`，并通过子类型关系 `ResetCounter <: Counter` 来满足需求。具体步骤如下：
+我们可以利用有界存在类型包来定义 $Counter$ 和 $ResetCounter$，并通过子类型关系 $ResetCounter <: Counter$ 来满足需求。具体步骤如下：
 
-1. **定义 `Counter` ADT**：
+1. **定义 $Counter$ ADT**：
 
    ```plaintext
    CounterADT =
@@ -1370,7 +1370,7 @@ counter.inc 3;
    ñ CounterADT : {∃Counter<:Nat, {new: Counter, get: Counter→Nat, inc: Counter→Counter}}
    ```
 
-2. **定义 `ResetCounter` ADT**：
+2. **定义 $ResetCounter$ ADT**：
 
    ```plaintext
    ResetCounterADT =
@@ -1385,9 +1385,9 @@ counter.inc 3;
    ñ ResetCounterADT : {∃ResetCounter<:Nat, {new: ResetCounter, get: ResetCounter→Nat, inc: ResetCounter→ResetCounter, reset: ResetCounter→ResetCounter}}
    ```
 
-3. **建立子类型关系 `ResetCounter <: Counter`**：
+3. **建立子类型关系 $ResetCounter <: Counter$**：
 
-   由于 `ResetCounter` 提供了 `reset` 操作，因此其类型记录比 `Counter` 多了一个字段。利用有界存在类型的子类型规则 `S-Some` 和 `S-Some-Var`，我们可以定义：
+   由于 $ResetCounter$ 提供了 $reset$ 操作，因此其类型记录比 $Counter$ 多了一个字段。利用有界存在类型的子类型规则 $S-Some$ 和 $S-Some-Var$，我们可以定义：
 
    ```plaintext
    {∃ResetCounter<:Nat, {new: ResetCounter, get: ResetCounter→Nat, inc: ResetCounter→ResetCounter, reset: ResetCounter→ResetCounter}}
@@ -1397,12 +1397,12 @@ counter.inc 3;
 
    **解释**：
 
-   - `ResetCounter` 的类型记录包含了 `Counter` 的所有字段，并额外提供了 `reset` 操作。
-   - 根据 `S-Some-Var` 规则，如果 `ResetCounter <: Counter`，则可以将 `ResetCounter` 的存在类型视为 `Counter` 的子类型。
+   - $ResetCounter$ 的类型记录包含了 $Counter$ 的所有字段，并额外提供了 $reset$ 操作。
+   - 根据 $S-Some-Var$ 规则，如果 $ResetCounter <: Counter$，则可以将 $ResetCounter$ 的存在类型视为 $Counter$ 的子类型。
 
 **结论**：
 
-通过使用有界存在类型包，我们成功地定义了 `Counter` 和 `ResetCounter` 两个ADT，满足所有给定的条件，包括 `ResetCounter <: Counter`，并且对客户端隐藏了具体的表示方式。
+通过使用有界存在类型包，我们成功地定义了 $Counter$ 和 $ResetCounter$ 两个ADT，满足所有给定的条件，包括 $ResetCounter <: Counter$，并且对客户端隐藏了具体的表示方式。
 
 ### 编码有界存在类型（Encoding Bounded Existentials）
 
