--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第27章 实例分析：命令性对象、约式.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第五部分 多态/第27章 实例分析：命令性对象、约式.md
@@ -22,7 +22,7 @@
 
 #### 示例：SetCounter 类的实现
 
-首先，假设我们有一个计数器类，其公开接口类型为 $SetCounter$，内部表示类型为 $CounterRep$，并具有方法 `get`、`set` 和 `inc`。
+首先，假设我们有一个计数器类，其公开接口类型为 $SetCounter$，内部表示类型为 $CounterRep$，并具有方法 $get$、$set$ 和 $inc$。
 
 - **公开接口类型**：
 
@@ -60,22 +60,22 @@ setCounterClass =
   - **参数 $r$**：类型为 $CounterRep$，表示对象的实例变量记录（instance variable record）。
   - **参数 $self$**：类型为 $Source\ SetCounter$，即对 $SetCounter$ 的引用。我们使用 $Source$ 而不是 $Ref$，因为 $Source$ 是协变的（covariant），允许子类型之间的转换。
   - **方法定义**：
-    - `get` 方法：返回引用 $r.x$ 的解引用值（即当前计数器的值）。
-    - `set` 方法：将计数器的值设置为给定的自然数 $i$。
-    - `inc` 方法：调用 `self` 的 `get` 方法获取当前值，加一后，再调用 `self` 的 `set` 方法更新值。
+    - $get$ 方法：返回引用 $r.x$ 的解引用值（即当前计数器的值）。
+    - $set$ 方法：将计数器的值设置为给定的自然数 $i$。
+    - $inc$ 方法：调用 $self$ 的 $get$ 方法获取当前值，加一后，再调用 $self$ 的 $set$ 方法更新值。
 
 ---
 
 #### 使用 Source 而非 Ref
 
-- **原因**：当我们定义 `setCounterClass` 的子类时，新的类的 `self` 将具有不同的类型。
+- **原因**：当我们定义 $setCounterClass$ 的子类时，新的类的 $self$ 将具有不同的类型。
 - **解决方案**：使用类型构造器 $Source$，因为它是协变的，允许从 $Source\ InstrCounter$ 转换为 $Source\ SetCounter$。
 
 ---
 
 #### 定义子类 InstrCounterClass
 
-假设我们有一个带有额外方法 `accesses` 的计数器类，其接口类型为 $InstrCounter$，表示类型为 $InstrCounterRep$。
+假设我们有一个带有额外方法 $accesses$ 的计数器类，其接口类型为 $InstrCounter$，表示类型为 $InstrCounterRep$。
 
 - **接口类型**：
 
@@ -114,17 +114,17 @@ instrCounterClass =
 - **解释**：
   - **参数 $r$**：类型为 $InstrCounterRep$，包含计数器值和访问计数器。
   - **参数 $self$**：类型为 $Source\ InstrCounter$。
-  - **变量 `super`**：通过调用 `setCounterClass r self` 获取父类的方法，实现方法的继承。
+  - **变量 $super$**：通过调用 $setCounterClass r self$ 获取父类的方法，实现方法的继承。
   - **方法定义**：
-    - `get` 和 `inc` 方法直接使用父类的方法。
-    - `set` 方法在设置值之前，先将访问计数器 $r.a$ 加一。
-    - `accesses` 方法返回访问计数器的当前值。
+    - $get$ 和 $inc$ 方法直接使用父类的方法。
+    - $set$ 方法在设置值之前，先将访问计数器 $r.a$ 加一。
+    - $accesses$ 方法返回访问计数器的当前值。
 
 ---
 
 #### 协变类型构造器的作用
 
-- **需要从 $Source\ InstrCounter$ 转换为 $Source\ SetCounter$**：为了在 `instrCounterClass` 中调用父类 `setCounterClass`，需要将 `self` 传递给父类，但类型为 $Source\ InstrCounter$。由于 $Source$ 是协变的，允许这种类型转换。
+- **需要从 $Source\ InstrCounter$ 转换为 $Source\ SetCounter$**：为了在 $instrCounterClass$ 中调用父类 $setCounterClass$，需要将 $self$ 传递给父类，但类型为 $Source\ InstrCounter$。由于 $Source$ 是协变的，允许这种类型转换。
 
 ---
 
@@ -139,9 +139,9 @@ instrCounterClass =
 
 #### 参数顺序的问题
 
-- **当前参数顺序**：`λr:CounterRep. λself: Source SetCounter.`
-  - **问题**：`self` 参数在构建类表（method table）时需要，但实例变量记录 $r$ 只有在实际调用方法时才使用。
-- **改进方案**：将 `self` 参数放在前面。
+- **当前参数顺序**：$λr:CounterRep. λself: Source SetCounter.$
+  - **问题**：$self$ 参数在构建类表（method table）时需要，但实例变量记录 $r$ 只有在实际调用方法时才使用。
+- **改进方案**：将 $self$ 参数放在前面。
 
 ---
 
@@ -167,9 +167,9 @@ setCounterClass =
   $$
 
 - **主要变化**：
-  1. **参数顺序调整**：`self` 参数在前，`r` 参数在后。
-  2. **`self` 的类型更改**：从 $SetCounter$ 变为 $CounterRep \to SetCounter$，因为现在 `self` 是一个接受实例变量记录的函数。
-  3. **方法体中对 `!self` 的使用**：所有 `!self` 替换为 `(!self r)`，因为 `self` 现在是一个函数。
+  1. **参数顺序调整**：$self$ 参数在前，$r$ 参数在后。
+  2. **$self$ 的类型更改**：从 $SetCounter$ 变为 $CounterRep \to SetCounter$，因为现在 $self$ 是一个接受实例变量记录的函数。
+  3. **方法体中对 $!self$ 的使用**：所有 $!self$ 替换为 $(!self r)$，因为 $self$ 现在是一个函数。
 
 ---
 
@@ -190,17 +190,17 @@ newSetCounter =
   $$
 
 - **解释**：
-  - **第一行**：创建一个引用 `m`，初始值为一个始终抛出错误的函数。
-  - **第二行**：调用 `setCounterClass m`，得到方法表 `m'`。
-  - **第三行**：将 `m` 更新为 `m'`，并返回一个函数，每次调用时创建新的实例变量记录 `r`，并应用方法表 `m'`。
+  - **第一行**：创建一个引用 $m$，初始值为一个始终抛出错误的函数。
+  - **第二行**：调用 $setCounterClass m$，得到方法表 $m'$。
+  - **第三行**：将 $m$ 更新为 $m'$，并返回一个函数，每次调用时创建新的实例变量记录 $r$，并应用方法表 $m'$。
 
-- **效率改进**：前两行只在 `newSetCounter` 定义时执行一次，因此方法表 `m'` 只创建一次，之后重复使用。
+- **效率改进**：前两行只在 $newSetCounter$ 定义时执行一次，因此方法表 $m'$ 只创建一次，之后重复使用。
 
 ---
 
 #### 出现的问题：逆变位置的类型不匹配
 
-当我们尝试定义子类 `instrCounterClass` 时，遇到了类型不匹配的问题。
+当我们尝试定义子类 $instrCounterClass$ 时，遇到了类型不匹配的问题。
 
 **定义失败的 instrCounterClass**：
 
@@ -220,8 +220,8 @@ instrCounterClass =
 - **错误**：参数类型不匹配。
 
 - **原因**：
-  - 在定义 `super` 时，我们将 `self` 传递给 `setCounterClass`。
-  - `self` 的类型为 $Source\ (InstrCounterRep \to InstrCounter)$。
+  - 在定义 $super$ 时，我们将 $self$ 传递给 $setCounterClass$。
+  - $self$ 的类型为 $Source\ (InstrCounterRep \to InstrCounter)$。
   - 需要验证：
 
     $$
@@ -234,7 +234,7 @@ instrCounterClass =
 
 ### 使用有界量化解决问题
 
-为了解决上述问题，我们引入有界量化，重新定义 `setCounterClass`。
+为了解决上述问题，我们引入有界量化，重新定义 $setCounterClass$。
 
 **新的 setCounterClass 定义**：
 
@@ -262,7 +262,7 @@ setCounterClass =
   - **参数 $r$**：类型为 $R$。
 
 - **优势**：
-  - 放宽了对 `self` 参数的要求，使其能够接受任何 $CounterRep$ 的子类型。
+  - 放宽了对 $self$ 参数的要求，使其能够接受任何 $CounterRep$ 的子类型。
   - 解决了之前类型不匹配的问题，因为现在类型参数化了。
 
 ---
@@ -291,7 +291,7 @@ instrCounterClass =
 
 - **解释**：
   - **类型参数 $R$**：使用有界量化，$R$ 是 $InstrCounterRep$ 的子类型。
-  - **在调用 `setCounterClass` 时**，我们用 `[R]` 实例化类型参数，传递相同的 `self`。
+  - **在调用 $setCounterClass$ 时**，我们用 $[R]$ 实例化类型参数，传递相同的 $self$。
 
 - **为什么现在可行**：
   - 需要验证：
@@ -321,7 +321,7 @@ newInstrCounter =
   $$
 
 - **解释**：
-  - **类型实例化**：在调用 `instrCounterClass` 时，用 `InstrCounterRep` 实例化类型参数 $R$。
+  - **类型实例化**：在调用 $instrCounterClass$ 时，用 $InstrCounterRep$ 实例化类型参数 $R$。
   - **与之前的区别**：仅在需要实例化类型参数。
 
 ---
@@ -350,7 +350,7 @@ ic.accesses unit;
   \vdash\ 1 : Nat
   $$
 
-- **解释**：我们创建了一个新的仪表化计数器，调用 `inc` 方法，然后获取当前值，结果为 2。调用 `accesses` 方法，得到访问次数为 1。
+- **解释**：我们创建了一个新的仪表化计数器，调用 $inc$ 方法，然后获取当前值，结果为 2。调用 $accesses$ 方法，得到访问次数为 1。
 
 ---
 
@@ -358,7 +358,7 @@ ic.accesses unit;
 
 通过引入有界量化，我们成功地：
 
-- **解决了类型不匹配的问题**：利用有界类型参数，放宽了对 `self` 参数的要求。
+- **解决了类型不匹配的问题**：利用有界类型参数，放宽了对 $self$ 参数的要求。
 - **提高了效率**：方法表在类创建时只生成一次，之后重复使用。
 - **保持了类型安全性**：类型系统能够验证子类与父类之间的关系。
 
@@ -378,7 +378,7 @@ ic.accesses unit;
 
 1. **问题的核心**：
 
-   - 我们当前的类编码依赖于 $Source$ 类型构造器的协变性，这允许我们在子类化时，`self` 参数的类型可以是父类类型的子类型。
+   - 我们当前的类编码依赖于 $Source$ 类型构造器的协变性，这允许我们在子类化时，$self$ 参数的类型可以是父类类型的子类型。
    - 在只有不变的 $Ref$ 构造器的语言中，类型构造器 $Ref$ 是不变的，不能直接进行子类型转换。
 
 2. **解决方案**：
@@ -392,7 +392,7 @@ ic.accesses unit;
 
      - 定义一个类型构造器 $MySource$，使其具有我们需要的协变性质。
 
-   - **重新定义 `setCounterClass`**：
+   - **重新定义 $setCounterClass$**：
 
      ```plaintext
      setCounterClass =
@@ -406,9 +406,9 @@ ic.accesses unit;
          };
      ```
 
-     - 这里，我们将 `self` 定义为函数类型 `R → SetCounter`，不再使用 $Source$。
+     - 这里，我们将 $self$ 定义为函数类型 $R → SetCounter$，不再使用 $Source$。
 
-   - **在需要传递 `self` 时，使用类型参数化来确保类型安全**。
+   - **在需要传递 $self$ 时，使用类型参数化来确保类型安全**。
 
 4. **类型安全性**：
 
@@ -459,8 +459,8 @@ instrCounterClass =
 
 - **解释**：
 
-  - 我们将 `self` 定义为函数类型 `R → SetCounter` 或 `R → InstrCounter`。
-  - 在调用 `setCounterClass` 时，使用类型参数 `[R]` 实例化类型变量。
+  - 我们将 $self$ 定义为函数类型 $R → SetCounter$ 或 $R → InstrCounter$。
+  - 在调用 $setCounterClass$ 时，使用类型参数 $[R]$ 实例化类型变量。
   - 由于没有使用 $Source$，我们避免了类型构造器的协变性问题。
 
 **验证类型关系**：
