--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第四部分 递归类型/第21章 递归类型元理论.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第四部分 递归类型/第21章 递归类型元理论.md
@@ -1841,7 +1841,7 @@ $$
 
 ### 针对 $\mu$-类型的子类型算法（图 21-4）
 
-**算法：** `subtype(A, S, T)`
+**算法：** $subtype(A, S, T)$
 
 **输入：**
 
@@ -2241,9 +2241,9 @@ $$
 
 ## 21.10 插曲：一个指数级的算法（An Exponential Algorithm）
 
-我们考虑一个简化的子类型算法，类似于 Amadio 和 Cardelli（1993）提出的算法，称为 `subtypeac`。这个算法仅返回一个布尔值，而不是更新的假设集合。
+我们考虑一个简化的子类型算法，类似于 Amadio 和 Cardelli（1993）提出的算法，称为 $subtypeac$。这个算法仅返回一个布尔值，而不是更新的假设集合。
 
-### 算法：`subtypeac(A, S, T)`
+### 算法：$subtypeac(A, S, T)$
 
 **输入：**
 
@@ -2341,7 +2341,7 @@ $$
 
 **检查 $S_n <: T_n$**
 
-- 初始调用 `subtypeac(∅, S_n, T_n)`。
+- 初始调用 $subtypeac(∅, S_n, T_n)$。
 - 递归调用会以指数级增长，每次都会产生两个对 $S_{n-1}$ 和 $T_{n-1}$ 的递归调用。
 
 **结论：**
@@ -2352,7 +2352,7 @@ $$
 
 ## 21.11 子类型等价递归类型（Subtyping Iso-Recursive Types）
 
-在第 20.2 节中，我们提到了**等价递归类型（iso-recursive types）**，其中递归类型的折叠和展开通过 `fold` 和 `unfold` 构造显式地表示。
+在第 20.2 节中，我们提到了**等价递归类型（iso-recursive types）**，其中递归类型的折叠和展开通过 $fold$ 和 $unfold$ 构造显式地表示。
 
 当在具有等价递归类型的语言中添加子类型关系时，我们需要定义直接涉及递归类型的子类型规则，以反映 $\mu$ 构造器的刚性。
 
