--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第13章 引用.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/第13章 引用.md
@@ -16,24 +16,24 @@
 
 几乎每种编程语言都提供了一种赋值操作（assignment operation），用于改变先前分配的存储空间的内容。
 
-**注**：本章研究的系统是带有 Unit 和引用（References，见图13-1）的简单类型 $\lambda$ 演算（simply typed lambda-calculus）。关联的 OCaml 实现是 `fullref`。
+**注**：本章研究的系统是带有 Unit 和引用（References，见图13-1）的简单类型 $\lambda$ 演算（simply typed lambda-calculus）。关联的 OCaml 实现是 $fullref$。
 
-**绑定（Binding）**和**赋值（Assignment）**的机制在一些语言中（特别是 ML 及其相关语言）是分开的。我们可以有一个变量 $x$，其值是数字 $5$；或者一个变量 $y$，其值是指向一个当前内容为 $5$ 的可变单元（mutable cell）的**引用（reference）**（或指针 pointer）。这个区别对于程序员是可见的。我们可以将 $x$ 加到另一个数字上，但不能对它赋值。我们可以直接使用 $y$ 给它指向的单元赋予一个新值（通过写作 $y := 84$），但不能直接将其作为 `plus` 的参数。相反，我们必须显式地对其解引用（dereference），写作 $!y$ 来获得其当前内容。在大多数其他语言中，特别是在所有 C 家族的成员（包括 Java）中，每个变量名都引用一个可变单元，对变量进行解引用以获取其当前内容的操作是**隐式的**。
+**绑定（Binding）**和**赋值（Assignment）**的机制在一些语言中（特别是 ML 及其相关语言）是分开的。我们可以有一个变量 $x$，其值是数字 $5$；或者一个变量 $y$，其值是指向一个当前内容为 $5$ 的可变单元（mutable cell）的**引用（reference）**（或指针 pointer）。这个区别对于程序员是可见的。我们可以将 $x$ 加到另一个数字上，但不能对它赋值。我们可以直接使用 $y$ 给它指向的单元赋予一个新值（通过写作 $y := 84$），但不能直接将其作为 $plus$ 的参数。相反，我们必须显式地对其解引用（dereference），写作 $!y$ 来获得其当前内容。在大多数其他语言中，特别是在所有 C 家族的成员（包括 Java）中，每个变量名都引用一个可变单元，对变量进行解引用以获取其当前内容的操作是**隐式的**。
 
-**重要提示**：严格来说，在 C 或 Java 中，类型为 $T$ 的大多数变量实际上应该被视为指向包含类型为 $\text{Option}(T)$ 的值的单元的指针，反映了变量的内容可以是一个正常值或特殊值 `null`。
+**重要提示**：严格来说，在 C 或 Java 中，类型为 $T$ 的大多数变量实际上应该被视为指向包含类型为 $\text{Option}(T)$ 的值的单元的指针，反映了变量的内容可以是一个正常值或特殊值 $null$。
 
 **对于形式化的研究**，将这些机制分开是有用的；我们的发展将紧密遵循 ML 的模型。将这里学到的经验应用到类似 C 的语言上，只需简单地合并一些区别，并将某些操作（如解引用）从显式变为隐式即可。
 
 #### 基础
 
-引用的基本操作是**分配（allocation）**、**解引用（dereferencing）**和**赋值（assignment）**。要分配一个引用，我们使用 `ref` 操作符，提供新单元的初始值。
+引用的基本操作是**分配（allocation）**、**解引用（dereferencing）**和**赋值（assignment）**。要分配一个引用，我们使用 $ref$ 操作符，提供新单元的初始值。
 
 ```plaintext
 r = ref 5;
 ⊢ r : Ref Nat
 ```
 
-类型检查器的响应表明，`r` 的值是一个引用，指向一个总是包含数字的单元。要读取该单元的当前值，我们使用解引用操作符 `!`。
+类型检查器的响应表明，$r$ 的值是一个引用，指向一个总是包含数字的单元。要读取该单元的当前值，我们使用解引用操作符 $!$。
 
 ```plaintext
 !r;
@@ -47,7 +47,7 @@ r := 7;
 ⊢ unit : Unit
 ```
 
-**注意**：赋值的结果是平凡的 `unit` 值（参见第11.2节）。如果我们再次解引用 `r`，我们会看到更新后的值。
+**注意**：赋值的结果是平凡的 $unit$ 值（参见第11.2节）。如果我们再次解引用 $r$，我们会看到更新后的值。
 
 ```plaintext
 !r;
@@ -56,7 +56,7 @@ r := 7;
 
 #### 副作用和序列化（Side Effects and Sequencing）
 
-赋值表达式的结果是平凡的值 `unit`，这与第11.3节定义的序列化符号非常契合，允许我们写作：
+赋值表达式的结果是平凡的值 $unit$，这与第11.3节定义的序列化符号非常契合，允许我们写作：
 
 ```plaintext
 (r := succ(!r); !r);
@@ -70,9 +70,9 @@ r := 7;
 ⊢ 9 : Nat
 ```
 
-来按顺序求值两个表达式并返回第二个表达式的值。将第一个表达式的类型限制为 `Unit` 有助于类型检查器捕获一些愚蠢的错误，因为它允许我们仅在确实保证值是平凡的情况下丢弃第一个值。
+来按顺序求值两个表达式并返回第二个表达式的值。将第一个表达式的类型限制为 $Unit$ 有助于类型检查器捕获一些愚蠢的错误，因为它允许我们仅在确实保证值是平凡的情况下丢弃第一个值。
 
-注意，如果第二个表达式也是一个赋值，那么整个序列的类型将是 `Unit`，因此我们可以合法地将其放在另一个 `;` 的左侧，构建更长的赋值序列：
+注意，如果第二个表达式也是一个赋值，那么整个序列的类型将是 $Unit$，因此我们可以合法地将其放在另一个 $;$ 的左侧，构建更长的赋值序列：
 
 ```plaintext
 (r := succ(!r); r := succ(!r); r := succ(!r); r := succ(!r); !r);
@@ -81,13 +81,13 @@ r := 7;
 
 #### 引用和别名（References and Aliasing）
 
-牢记绑定到 `r` 的**引用**与该引用指向的存储器中的**单元**之间的区别是很重要的。
+牢记绑定到 $r$ 的**引用**与该引用指向的存储器中的**单元**之间的区别是很重要的。
 
 ```plaintext
 [图示：r 指向一个值为 13 的存储单元]
 ```
 
-如果我们复制 `r`，例如将其值绑定到另一个变量 `s`：
+如果我们复制 $r$，例如将其值绑定到另一个变量 $s$：
 
 ```plaintext
 s = r;
@@ -100,29 +100,29 @@ s = r;
 [图示：r 和 s 都指向值为 13 的同一存储单元]
 ```
 
-我们可以通过对 `s` 进行赋值来验证这一点：
+我们可以通过对 $s$ 进行赋值来验证这一点：
 
 ```plaintext
 s := 82;
 ⊢ unit : Unit
 ```
 
-并通过 `r` 读取它：
+并通过 $r$ 读取它：
 
 ```plaintext
 !r;
 ⊢ 82 : Nat
 ```
 
-引用 `r` 和 `s` 被称为指向同一单元的**别名（aliases）**。
+引用 $r$ 和 $s$ 被称为指向同一单元的**别名（aliases）**。
 
-**练习 13.1.1** [«]：画出类似的图示，展示计算表达式 `a = {ref 0, ref 0}` 和 `b = (λx:Ref Nat. {x,x}) (ref 0)` 的效果。
+**练习 13.1.1** [«]：画出类似的图示，展示计算表达式 $a = {ref 0, ref 0}$ 和 $b = (λx:Ref Nat. {x,x}) (ref 0)$ 的效果。
 
 **解答**：
 
-1. 对于 `a = {ref 0, ref 0}`：
+1. 对于 $a = {ref 0, ref 0}$：
 
-   - `ref 0` 被计算两次，产生两个不同的引用，分别指向两个不同的存储单元，初始值都是 `0`。
+   - $ref 0$ 被计算两次，产生两个不同的引用，分别指向两个不同的存储单元，初始值都是 $0$。
 
    ```plaintext
    [图示]
@@ -131,9 +131,9 @@ s := 82;
    l2 指向 0
    ```
 
-2. 对于 `b = (λx:Ref Nat. {x,x}) (ref 0)`：
+2. 对于 $b = (λx:Ref Nat. {x,x}) (ref 0)$：
 
-   - `ref 0` 只被计算一次，产生一个引用 `l`，传递给函数，函数返回 `{x, x}`，即 `{l, l}`，两个字段都引用同一个存储单元。
+   - $ref 0$ 只被计算一次，产生一个引用 $l$，传递给函数，函数返回 ${x, x}$，即 ${l, l}$，两个字段都引用同一个存储单元。
 
    ```plaintext
    [图示]
@@ -145,7 +145,7 @@ s := 82;
 
 #### 共享状态（Shared State）
 
-**别名**的可能性会使得带有引用的程序在推理时相当棘手。例如，表达式 `(r := 1; r := !s)`，它先将 `1` 赋值给 `r`，然后立即用 `s` 的当前值覆盖它，与单个赋值 `r := !s` 有完全相同的效果，除非我们在一个上下文中写它，其中 `r` 和 `s` 是同一个单元的别名。
+**别名**的可能性会使得带有引用的程序在推理时相当棘手。例如，表达式 $(r := 1; r := !s)$，它先将 $1$ 赋值给 $r$，然后立即用 $s$ 的当前值覆盖它，与单个赋值 $r := !s$ 有完全相同的效果，除非我们在一个上下文中写它，其中 $r$ 和 $s$ 是同一个单元的别名。
 
 当然，**别名**也是引用有用的一个重要部分。特别地，它允许我们在程序的不同部分之间建立“隐式的通信通道”——**共享状态**。例如，假设我们定义一个引用单元和两个操作其内容的函数：
 
@@ -160,38 +160,38 @@ decc = λx:Unit. (c := pred(!c); !c);
 ⊢ decc : Unit → Nat
 ```
 
-调用 `incc`：
+调用 $incc$：
 
 ```plaintext
 incc unit;
 ⊢ 1 : Nat
 ```
 
-会导致对 `c` 的更改，这可以通过调用 `decc` 来观察：
+会导致对 $c$ 的更改，这可以通过调用 $decc$ 来观察：
 
 ```plaintext
 decc unit;
 ⊢ 0 : Nat
 ```
 
-如果我们将 `incc` 和 `decc` 一起打包到一个记录中：
+如果我们将 $incc$ 和 $decc$ 一起打包到一个记录中：
 
 ```plaintext
 o = { i = incc, d = decc };
 ⊢ o : { i: Unit → Nat, d: Unit → Nat }
 ```
 
-那么我们可以将整个结构作为一个单元传递，并使用其组件对共享的状态 `c` 执行递增和递减操作。实际上，我们已经构造了一种简单的对象（object）。这个思想将在第18章中详细展开。
+那么我们可以将整个结构作为一个单元传递，并使用其组件对共享的状态 $c$ 执行递增和递减操作。实际上，我们已经构造了一种简单的对象（object）。这个思想将在第18章中详细展开。
 
 #### 对复合类型的引用（References to Compound Types）
 
-引用单元不仅可以包含一个数字：上述的基本操作允许我们创建对任何类型值的引用，包括函数。例如，我们可以使用对函数的引用来给出一个（不是很高效的）数字数组（arrays of numbers）的实现，如下所示。将 `NatArray` 定义为类型 `Ref (Nat → Nat)`。
+引用单元不仅可以包含一个数字：上述的基本操作允许我们创建对任何类型值的引用，包括函数。例如，我们可以使用对函数的引用来给出一个（不是很高效的）数字数组（arrays of numbers）的实现，如下所示。将 $NatArray$ 定义为类型 $Ref (Nat → Nat)$。
 
 ```plaintext
 NatArray = Ref (Nat → Nat);
 ```
 
-要构建一个新的数组，我们分配一个引用单元，并填充一个函数，当给定一个索引时，总是返回 `0`。
+要构建一个新的数组，我们分配一个引用单元，并填充一个函数，当给定一个索引时，总是返回 $0$。
 
 ```plaintext
 newarray = λ_:Unit. ref (λn:Nat. 0);
@@ -205,7 +205,7 @@ lookup = λa:NatArray. λn:Nat. (!a) n;
 ⊢ lookup : NatArray → Nat → Nat
 ```
 
-编码的有趣部分是更新函数。它接受一个数组、一个索引和要存储在该索引的新值，通过创建（并存储在引用中）一个新函数来完成工作：当它被要求提供这个索引的值时，返回提供给 `update` 的新值；对于所有其他索引，将查找传递给之前存储在引用中的函数。
+编码的有趣部分是更新函数。它接受一个数组、一个索引和要存储在该索引的新值，通过创建（并存储在引用中）一个新函数来完成工作：当它被要求提供这个索引的值时，返回提供给 $update$ 的新值；对于所有其他索引，将查找传递给之前存储在引用中的函数。
 
 ```plaintext
 update = λa:NatArray. λm:Nat. λv:Nat.
@@ -214,7 +214,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 ⊢ update : NatArray → Nat → Nat → Unit
 ```
 
-**练习 13.1.2** [««]：如果我们将 `update` 定义得更紧凑，如下所示：
+**练习 13.1.2** [««]：如果我们将 $update$ 定义得更紧凑，如下所示：
 
 ```plaintext
 update = λa:NatArray. λm:Nat. λv:Nat.
@@ -225,7 +225,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 **解答**：
 
-- 是的，行为是一样的。区别在于原始版本保存了旧函数 `oldf`，而新的版本直接在函数体中使用 `!a` 来引用旧函数。由于在赋值前 `!a` 总是引用旧函数，因此两者等价。
+- 是的，行为是一样的。区别在于原始版本保存了旧函数 $oldf$，而新的版本直接在函数体中使用 $!a$ 来引用旧函数。由于在赋值前 $!a$ 总是引用旧函数，因此两者等价。
 
 ---
 
@@ -233,17 +233,17 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 #### 垃圾回收（Garbage Collection）
 
-在继续形式化引用之前，我们最后需要提到一个问题：存储的释放（storage deallocation）。我们没有提供任何用于在不再需要时释放引用单元的原语。相反，像许多现代语言（包括 ML 和 Java）一样，我们依赖于运行时系统执行**垃圾回收（garbage collection）**，收集并重用程序不再能够访问的单元。这不仅仅是语言设计中的一个品味问题：在存在显式释放操作的情况下，很难实现类型安全。这背后的原因是熟悉的**悬挂引用问题（dangling reference problem）**：我们分配一个包含数字的单元，将对它的引用保存到某个数据结构中，使用它一段时间，然后释放它并分配一个包含布尔值的新单元，可能重用了相同的存储空间。现在，我们可能对同一个存储单元有两个名称——一个类型为 `Ref Nat`，另一个类型为 `Ref Bool`。
+在继续形式化引用之前，我们最后需要提到一个问题：存储的释放（storage deallocation）。我们没有提供任何用于在不再需要时释放引用单元的原语。相反，像许多现代语言（包括 ML 和 Java）一样，我们依赖于运行时系统执行**垃圾回收（garbage collection）**，收集并重用程序不再能够访问的单元。这不仅仅是语言设计中的一个品味问题：在存在显式释放操作的情况下，很难实现类型安全。这背后的原因是熟悉的**悬挂引用问题（dangling reference problem）**：我们分配一个包含数字的单元，将对它的引用保存到某个数据结构中，使用它一段时间，然后释放它并分配一个包含布尔值的新单元，可能重用了相同的存储空间。现在，我们可能对同一个存储单元有两个名称——一个类型为 $Ref Nat$，另一个类型为 $Ref Bool$。
 
 **练习 13.1.3** [««]：展示这如何导致类型安全性的违反。
 
 **解答**：
 
-- 如果我们有一个类型为 `Ref Nat` 的引用 `r`，指向一个存储单元 `l`。我们释放了 `l`，并将其重新分配给一个类型为 `Ref Bool` 的引用 `b`。
+- 如果我们有一个类型为 $Ref Nat$ 的引用 $r$，指向一个存储单元 $l$。我们释放了 $l$，并将其重新分配给一个类型为 $Ref Bool$ 的引用 $b$。
 
-- 现在，`r` 和 `b` 都指向同一个位置 `l`，但类型检查器认为 `r` 是 `Ref Nat`，`b` 是 `Ref Bool`。
+- 现在，$r$ 和 $b$ 都指向同一个位置 $l$，但类型检查器认为 $r$ 是 $Ref Nat$，$b$ 是 $Ref Bool$。
 
-- 我们可以通过 `!r` 读取一个布尔值（但类型系统认为是 `Nat`），或者对 `r` 进行赋值 `r := 5`，覆盖了布尔值。
+- 我们可以通过 $!r$ 读取一个布尔值（但类型系统认为是 $Nat$），或者对 $r$ 进行赋值 $r := 5$，覆盖了布尔值。
 
 - 这会导致类型系统的破坏，因为我们可以在预期是数字的地方得到布尔值，反之亦然。
 
@@ -251,7 +251,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 ### 13.2 类型（Typing）
 
-`ref`、`:=` 和 `!` 的类型规则直接来自它们的行为。
+$ref$、$:=$ 和 $!$ 的类型规则直接来自它们的行为。
 
 - **（T-Ref）**：
 
@@ -275,17 +275,17 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 ### 13.3 求值（Evaluation）
 
-当我们考虑如何形式化引用的操作行为时，一个更微妙的方面出现了。可以问：“类型为 `Ref T` 的值应该是什么？”我们需要考虑的关键观察是，求值一个 `ref` 操作应该做一些事情——即分配一些存储空间——并且操作的结果应该是对该存储的引用。
+当我们考虑如何形式化引用的操作行为时，一个更微妙的方面出现了。可以问：“类型为 $Ref T$ 的值应该是什么？”我们需要考虑的关键观察是，求值一个 $ref$ 操作应该做一些事情——即分配一些存储空间——并且操作的结果应该是对该存储的引用。
 
 那么，**什么是一个引用（reference）**？
 
-大多数编程语言实现中的运行时存储（run-time store）本质上只是一个巨大的字节数组。运行时系统跟踪这个数组的哪些部分当前正在使用；当我们需要分配一个新的引用单元时，我们从存储的空闲区域分配一个足够大的段（例如，整数单元需要 4 字节，存储 `Float` 的单元需要 8 字节等），将其标记为已使用，并返回新分配的区域的起始索引（通常是一个 32 位或 64 位整数）。这些索引就是引用。
+大多数编程语言实现中的运行时存储（run-time store）本质上只是一个巨大的字节数组。运行时系统跟踪这个数组的哪些部分当前正在使用；当我们需要分配一个新的引用单元时，我们从存储的空闲区域分配一个足够大的段（例如，整数单元需要 4 字节，存储 $Float$ 的单元需要 8 字节等），将其标记为已使用，并返回新分配的区域的起始索引（通常是一个 32 位或 64 位整数）。这些索引就是引用。
 
 **对于当前的目的**，没有必要如此具体。我们可以将存储看作是一个值的数组，而不是字节的数组，抽象掉不同值的运行时表示的不同大小。此外，我们可以抽象掉引用（即该数组的索引）是数字这一事实。我们将引用视为某个**未解释的集合** $L$ 中的存储位置（store locations）的元素，并将存储看作是从位置 $l$ 到值的一个**部分函数**（partial function）。我们使用元变量 $\mu$ 来表示存储。
 
 因此，**引用**是一个**位置（location）**——存储的一个抽象索引。为了强调这种抽象性质，我们从现在开始使用**位置**（location）一词，而不是引用或指针。
 
-**注意**：以这种方式抽象地处理位置，将阻止我们模拟在 C 等低级语言中发现的指针运算。这种限制是有意的。虽然指针运算有时非常有用（特别是在实现运行时系统的低级组件，如垃圾收集器时），但它不能被大多数类型系统跟踪：知道存储中位置 $n$ 包含一个 `Float`，并不能告诉我们关于位置 $n + 4$ 的类型的任何有用信息。在 C 中，指针运算是类型安全性违反的臭名昭著的来源。
+**注意**：以这种方式抽象地处理位置，将阻止我们模拟在 C 等低级语言中发现的指针运算。这种限制是有意的。虽然指针运算有时非常有用（特别是在实现运行时系统的低级组件，如垃圾收集器时），但它不能被大多数类型系统跟踪：知道存储中位置 $n$ 包含一个 $Float$，并不能告诉我们关于位置 $n + 4$ 的类型的任何有用信息。在 C 中，指针运算是类型安全性违反的臭名昭著的来源。
 
 ---
 
@@ -319,7 +319,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 ---
 
-接下来，我们需要对项的语法进行一个小的扩展。求值 `ref` 表达式的结果将是一个新的位置，因此我们需要将位置包含在可以作为求值结果的事物（即值）的集合中。
+接下来，我们需要对项的语法进行一个小的扩展。求值 $ref$ 表达式的结果将是一个新的位置，因此我们需要将位置包含在可以作为求值结果的事物（即值）的集合中。
 
 - **值（values）**：
 
@@ -348,7 +348,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 ---
 
-基于这种扩展的语法，我们可以为操纵位置和存储的新构造陈述求值规则。首先，要求值一个解引用表达式 `!t1`，我们必须首先将 `t1` 归约为一个值：
+基于这种扩展的语法，我们可以为操纵位置和存储的新构造陈述求值规则。首先，要求值一个解引用表达式 $!t1$，我们必须首先将 $t1$ 归约为一个值：
 
 - **（E-Deref）**：
 
@@ -356,7 +356,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{t_1\ |\ \mu \to t_1'\ |\ \mu'}{!t_1\ |\ \mu \to !t_1'\ |\ \mu'}
   $$
 
-一旦 `t1` 完成归约，我们应该有一个形式为 `!l` 的表达式，其中 `l` 是某个位置。尝试解引用任何其他类型的值（如函数或 `unit`）的项是错误的。在这种情况下，求值规则将卡住（stuck）。第13.5节中的类型安全性保证了良类型的项永远不会以这种方式出错。
+一旦 $t1$ 完成归约，我们应该有一个形式为 $!l$ 的表达式，其中 $l$ 是某个位置。尝试解引用任何其他类型的值（如函数或 $unit$）的项是错误的。在这种情况下，求值规则将卡住（stuck）。第13.5节中的类型安全性保证了良类型的项永远不会以这种方式出错。
 
 - **（E-DerefLoc）**：
 
@@ -364,7 +364,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{\mu(l) = v}{!l\ |\ \mu \to v\ |\ \mu}
   $$
 
-接下来，要求值一个赋值表达式 `t1 := t2`，我们必须首先将 `t1` 归约为一个值（即位置）：
+接下来，要求值一个赋值表达式 $t1 := t2$，我们必须首先将 $t1$ 归约为一个值（即位置）：
 
 - **（E-Assign1）**：
 
@@ -372,7 +372,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{t_1\ |\ \mu \to t_1'\ |\ \mu'}{t_1 := t_2\ |\ \mu \to t_1' := t_2\ |\ \mu'}
   $$
 
-然后将 `t2` 归约为一个值（任何类型的值）：
+然后将 $t2$ 归约为一个值（任何类型的值）：
 
 - **（E-Assign2）**：
 
@@ -380,7 +380,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{t_2\ |\ \mu \to t_2'\ |\ \mu'}{v_1 := t_2\ |\ \mu \to v_1 := t_2'\ |\ \mu'}
   $$
 
-一旦我们完成了对 `t1` 和 `t2` 的归约，我们有一个形式为 `l := v2` 的表达式，我们通过更新存储使位置 `l` 包含 `v2` 来执行它：
+一旦我们完成了对 $t1$ 和 $t2$ 的归约，我们有一个形式为 $l := v2$ 的表达式，我们通过更新存储使位置 $l$ 包含 $v2$ 来执行它：
 
 - **（E-Assign）**：
 
@@ -388,11 +388,11 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{}{l := v_2\ |\ \mu \to \text{unit}\ |\ [l \mapsto v_2]\mu}
   $$
 
-- 这里，`[l \mapsto v_2]\mu` 表示“将 `l` 映射到 `v2`，并将所有其他位置映射到与 $\mu$ 相同的存储”。
+- 这里，$[l \mapsto v_2]\mu$ 表示“将 $l$ 映射到 $v2$，并将所有其他位置映射到与 $\mu$ 相同的存储”。
 
-- 结果项是 `unit`；有趣的结果是更新后的存储。
+- 结果项是 $unit$；有趣的结果是更新后的存储。
 
-最后，要求值一个形式为 `ref t1` 的表达式，我们首先将 `t1` 归约为一个值：
+最后，要求值一个形式为 $ref t1$ 的表达式，我们首先将 $t1$ 归约为一个值：
 
 - **（E-Ref）**：
 
@@ -400,7 +400,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{t_1\ |\ \mu \to t_1'\ |\ \mu'}{\text{ref } t_1\ |\ \mu \to \text{ref } t_1'\ |\ \mu'}
   $$
 
-然后，为了求值 `ref` 本身，我们选择一个新的位置 `l`（即，不在 $\mu$ 的定义域中），并产生一个扩展了 $\mu$ 的新存储，其中添加了新的绑定 `l \mapsto v_1`。
+然后，为了求值 $ref$ 本身，我们选择一个新的位置 $l$（即，不在 $\mu$ 的定义域中），并产生一个扩展了 $\mu$ 的新存储，其中添加了新的绑定 $l \mapsto v_1$。
 
 - **（E-RefV）**：
 
@@ -408,7 +408,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
   \frac{l \notin \text{dom}(\mu)}{\text{ref } v_1\ |\ \mu \to l\ |\ (\mu, l \mapsto v_1)}
   $$
 
-- 这个求值步骤的结果项是新分配的位置的名称 `l`。
+- 这个求值步骤的结果项是新分配的位置的名称 $l$。
 
 ---
 
@@ -420,7 +420,7 @@ update = λa:NatArray. λm:Nat. λv:Nat.
 
 - **改进求值规则**：在每一步求值后，我们可以在更新存储时，移除那些不再可达的存储位置（即，程序中没有任何部分可以再访问这些位置）。
 
-- 这意味着在规则中，我们需要定义一个函数 `GC`，它接受当前项和存储，返回经过垃圾回收的存储。
+- 这意味着在规则中，我们需要定义一个函数 $GC$，它接受当前项和存储，返回经过垃圾回收的存储。
 
 - **需要证明的定理**：需要证明改进的求值关系与原始求值关系是**等价的**，即对于任意项和初始存储，求值序列在改进的规则下产生的最终结果（项和存储）与在原始规则下产生的结果相同，除了存储中包含的不可达位置被移除之外。
 
@@ -862,7 +862,7 @@ $$
 
 - 由于演算中没有显式的递归机制，我们可以通过引用来模拟递归。
 
-- 定义一个引用 `f`，并赋值一个函数，该函数在调用时再次调用 `f`，从而创建一个递归调用。
+- 定义一个引用 $f$，并赋值一个函数，该函数在调用时再次调用 $f$，从而创建一个递归调用。
 
 ---
 
