--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第四部分 递归类型/第20章 递归类型简介.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第四部分 递归类型/第20章 递归类型简介.md
@@ -4,21 +4,21 @@
 
 **第 20 章 递归类型 (Recursive Types)**
 
-在第 11.12 节中，我们看到如何将简单的类型系统扩展，以包含一个类型构造器 `List(T)`，其元素是类型为 `T` 的列表。列表只是一个大型通用结构类中的一个示例——还包括队列 (queues)、二叉树 (binary trees)、带标签的树 (labeled trees)、抽象语法树 (abstract syntax trees) 等——它们可以增长到任意大小，但具有简单、规则的结构。例如，`List(Nat)` 的元素总是 `nil` 或者一个数字和另一个 `List(Nat)` 的对（“cons 单元”）。显然，为这些结构中的每一个都提供一个单独的、原始的语言特性是不合理的。相反，我们需要一种通用机制，能够根据需要从更简单的元素定义它们。这个机制就是**递归类型 (recursive types)**。
+在第 11.12 节中，我们看到如何将简单的类型系统扩展，以包含一个类型构造器 $List(T)$，其元素是类型为 $T$ 的列表。列表只是一个大型通用结构类中的一个示例——还包括队列 (queues)、二叉树 (binary trees)、带标签的树 (labeled trees)、抽象语法树 (abstract syntax trees) 等——它们可以增长到任意大小，但具有简单、规则的结构。例如，$List(Nat)$ 的元素总是 $nil$ 或者一个数字和另一个 $List(Nat)$ 的对（“cons 单元”）。显然，为这些结构中的每一个都提供一个单独的、原始的语言特性是不合理的。相反，我们需要一种通用机制，能够根据需要从更简单的元素定义它们。这个机制就是**递归类型 (recursive types)**。
 
-再次考虑数字列表的类型。^1 我们可以使用在第 11.10 节和第 11.7 节中定义的变体 (variant) 和元组 (tuple) 类型，表示列表要么是 `nil`，要么是一个对。这一事实可以表示为：
+再次考虑数字列表的类型。^1 我们可以使用在第 11.10 节和第 11.7 节中定义的变体 (variant) 和元组 (tuple) 类型，表示列表要么是 $nil$，要么是一个对。这一事实可以表示为：
 
 $$
 \text{NatList} = \langle \text{nil}:\text{Unit}, \; \text{cons}:\{...,...\} \rangle;
 $$
 
-`nil` 携带的数据值是微不足道的，因为 `nil` 标签本身已经告诉我们关于空列表的所有需要知道的信息。另一方面，`cons` 标签携带的值是一个由一个数字和另一个列表组成的对。这个对的第一个组件的类型是 `Nat`：
+$nil$ 携带的数据值是微不足道的，因为 $nil$ 标签本身已经告诉我们关于空列表的所有需要知道的信息。另一方面，$cons$ 标签携带的值是一个由一个数字和另一个列表组成的对。这个对的第一个组件的类型是 $Nat$：
 
 $$
 \text{NatList} = \langle \text{nil}:\text{Unit}, \; \text{cons}:\{\text{Nat},\; ...\} \rangle;
 $$
 
-第二个组件是一个数字列表的列表——即，我们正在定义的 `NatList` 类型的一个元素：
+第二个组件是一个数字列表的列表——即，我们正在定义的 $NatList$ 类型的一个元素：
 
 $$
 \text{NatList} = \langle \text{nil}:\text{Unit}, \; \text{cons}:\{\text{Nat},\;\text{NatList}\} \rangle;
@@ -46,19 +46,19 @@ $$
                       ...
 ```
 
-指定这个无限树类型的递归等式类似于第 52 页中指定递归阶乘函数的等式。在这里，同样，将“循环”移动到等式右侧，使其成为一个正式的定义是很方便的。^2 我们通过为类型引入一个显式的递归运算符 `μ` 来实现这一点：
+指定这个无限树类型的递归等式类似于第 52 页中指定递归阶乘函数的等式。在这里，同样，将“循环”移动到等式右侧，使其成为一个正式的定义是很方便的。^2 我们通过为类型引入一个显式的递归运算符 $μ$ 来实现这一点：
 
 $$
 \text{NatList} = \mu X. \langle \text{nil}:\text{Unit}, \; \text{cons}:\{\text{Nat}, X\} \rangle;
 $$
 
-直观地，这个定义被解读为：“令 `NatList` 为满足等式 $X = \langle \text{nil}:\text{Unit}, \; \text{cons}:\{\text{Nat}, X\} \rangle$ 的无限类型。”
+直观地，这个定义被解读为：“令 $NatList$ 为满足等式 $X = \langle \text{nil}:\text{Unit}, \; \text{cons}:\{\text{Nat}, X\} \rangle$ 的无限类型。”
 
 在第 20.2 节中，我们将看到实际上有两种不同的形式化递归类型的方法——所谓的等式递归 (equi-recursive) 和同构递归 (iso-recursive) 表示法——它们在程序员被期望以类型注释的形式向类型检查器提供的帮助量上有所不同。在接下来的编程示例中，我们使用较轻量的等式递归表示法。
 
 ---
 
-^1 **注释**：在本章的其余部分中，我们忽略了如何给出具有任意类型 `T` 的元素的列表的单个通用定义的问题。要处理这个问题，我们还需要类型算子 (type operators) 的机制，我们将在第 29 章中介绍。
+^1 **注释**：在本章的其余部分中，我们忽略了如何给出具有任意类型 $T$ 的元素的列表的单个通用定义的问题。要处理这个问题，我们还需要类型算子 (type operators) 的机制，我们将在第 29 章中介绍。
 
 ^2 **注释**：这样移动的原因是，它允许我们在不为递归类型命名的情况下讨论它们。然而，使用显式命名的递归类型也有一些优势——参见第 19.3 节中关于名义类型系统与结构类型系统的讨论。
 
@@ -68,9 +68,9 @@ $$
 
 #### **列表 (Lists)**
 
-首先，让我们完成前面开始的数字列表的示例。要使用列表编程，我们需要一个常量 `nil`，一个构造函数 `cons`，用于将元素添加到现有列表的前面，一个接受列表并返回布尔值的操作 `isnil`，以及用于提取非空列表的头部和尾部的解构函数 `hd` 和 `tl`。我们在 **图 11-13** 中将所有这些定义为内置操作；这里我们的任务是从更简单的部分构建它们。
+首先，让我们完成前面开始的数字列表的示例。要使用列表编程，我们需要一个常量 $nil$，一个构造函数 $cons$，用于将元素添加到现有列表的前面，一个接受列表并返回布尔值的操作 $isnil$，以及用于提取非空列表的头部和尾部的解构函数 $hd$ 和 $tl$。我们在 **图 11-13** 中将所有这些定义为内置操作；这里我们的任务是从更简单的部分构建它们。
 
-根据将 `NatList` 定义为一个具有两个字段的变体类型，`nil` 和 `cons` 的定义直接得出：
+根据将 $NatList$ 定义为一个具有两个字段的变体类型，$nil$ 和 $cons$ 的定义直接得出：
 
 ```plaintext
 nil = <nil=unit> as NatList;
@@ -82,12 +82,12 @@ cons = λn:Nat. λl:NatList. <cons={n,l}> as NatList;
 
 **解释：**
 
-- **`nil` 的定义**：`<nil=unit> as NatList` 创建了一个变体值，标签为 `nil`，值为 `unit`，类型为 `NatList`。
-- **`cons` 的定义**：`λn:Nat. λl:NatList. <cons={n,l}> as NatList` 是一个接受一个 `Nat` 和一个 `NatList`，并返回一个新的 `NatList` 的函数。它创建了一个变体值，标签为 `cons`，值为 `{n,l}`（一个包含数字和列表的元组），类型为 `NatList`。
+- **$nil$ 的定义**：$<nil=unit> as NatList$ 创建了一个变体值，标签为 $nil$，值为 $unit$，类型为 $NatList$。
+- **$cons$ 的定义**：$λn:Nat. λl:NatList. <cons={n,l}> as NatList$ 是一个接受一个 $Nat$ 和一个 $NatList$，并返回一个新的 $NatList$ 的函数。它创建了一个变体值，标签为 $cons$，值为 ${n,l}$（一个包含数字和列表的元组），类型为 $NatList$。
 
-（回想一下，在第 11.10 节中，形式为 `<l=t> as T` 的表达式用于引入变体类型的值：值 `t` 被标记为标签 `l` 并“注入”到变体类型 `T` 中。此外，请注意，这里的类型检查器自动“展开”递归类型 `NatList` 为变体类型 `<nil:Unit, cons:{Nat,NatList}>`。）
+（回想一下，在第 11.10 节中，形式为 $<l=t> as T$ 的表达式用于引入变体类型的值：值 $t$ 被标记为标签 $l$ 并“注入”到变体类型 $T$ 中。此外，请注意，这里的类型检查器自动“展开”递归类型 $NatList$ 为变体类型 $<nil:Unit, cons:{Nat,NatList}>$。）
 
-列表上的其余基本操作涉及测试它们的结构并提取适当的部分。它们都以 `case` 为基础实现。
+列表上的其余基本操作涉及测试它们的结构并提取适当的部分。它们都以 $case$ 为基础实现。
 
 ```plaintext
 isnil = λl:NatList. case l of
@@ -108,11 +108,11 @@ tl = λl:NatList. case l of
 
 **解释：**
 
-- **`isnil`**：检查列表是否为空。如果匹配到 `<nil=u>`，则返回 `true`；如果匹配到 `<cons=p>`，则返回 `false`。
-- **`hd`（头部）**：提取列表的第一个元素。如果列表为空，返回 `0`；否则，匹配 `<cons=p>`，返回 `p.1`，即元组的第一个元素。
-- **`tl`（尾部）**：提取列表的剩余部分。如果列表为空，返回自身；否则，匹配 `<cons=p>`，返回 `p.2`，即元组的第二个元素。
+- **$isnil$**：检查列表是否为空。如果匹配到 $<nil=u>$，则返回 $true$；如果匹配到 $<cons=p>$，则返回 $false$。
+- **$hd$（头部）**：提取列表的第一个元素。如果列表为空，返回 $0$；否则，匹配 $<cons=p>$，返回 $p.1$，即元组的第一个元素。
+- **$tl$（尾部）**：提取列表的剩余部分。如果列表为空，返回自身；否则，匹配 $<cons=p>$，返回 $p.2$，即元组的第二个元素。
 
-我们任意地决定将空列表的 `hd` 定义为 `0`，将空列表的 `tl` 定义为空列表。我们也可以在这些情况下引发异常。
+我们任意地决定将空列表的 $hd$ 定义为 $0$，将空列表的 $tl$ 定义为空列表。我们也可以在这些情况下引发异常。
 
 我们可以将所有这些定义一起使用，编写一个递归函数，求列表元素的和：
 
@@ -129,10 +129,10 @@ sumlist mylist;
 
 **解释：**
 
-- **`sumlist`**：使用固定点组合子 `fix` 定义的递归函数。它接受一个 `NatList`，如果列表为空，返回 `0`；否则，返回列表头部与递归调用 `s`（`sumlist` 本身）作用于列表尾部的结果之和。
-- **`mylist`**：构造了一个包含数字 `2`、`3`、`5` 的列表。
+- **$sumlist$**：使用固定点组合子 $fix$ 定义的递归函数。它接受一个 $NatList$，如果列表为空，返回 $0$；否则，返回列表头部与递归调用 $s$（$sumlist$ 本身）作用于列表尾部的结果之和。
+- **$mylist$**：构造了一个包含数字 $2$、$3$、$5$ 的列表。
 
-注意，尽管 `NatList` 本身是一个无限长的类型表达式，但它的所有元素都是有限列表（因为没有办法使用配对和标记的原语或按值调用的 `fix` 来构建无限大的结构）。
+注意，尽管 $NatList$ 本身是一个无限长的类型表达式，但它的所有元素都是有限列表（因为没有办法使用配对和标记的原语或按值调用的 $fix$ 来构建无限大的结构）。
 
 ---
 
@@ -140,11 +140,11 @@ sumlist mylist;
 
 **问题：**
 
-一种标记的二叉树的表示方法定义树要么是一个叶子（没有标签），要么是一个内部节点，带有一个数字标签和两个子树。定义一个类型 `NatTree` 和适当的操作来构造、解构和测试树。编写一个函数，执行树的深度优先遍历并返回它找到的标签列表。使用 `fullequirec` 检查器测试你的代码。
+一种标记的二叉树的表示方法定义树要么是一个叶子（没有标签），要么是一个内部节点，带有一个数字标签和两个子树。定义一个类型 $NatTree$ 和适当的操作来构造、解构和测试树。编写一个函数，执行树的深度优先遍历并返回它找到的标签列表。使用 $fullequirec$ 检查器测试你的代码。
 
 **解答：**
 
-**定义 `NatTree` 类型：**
+**定义 $NatTree$ 类型：**
 
 ```plaintext
 NatTree = μX. <leaf:Unit, node:{Nat, X, X}>;
@@ -152,9 +152,9 @@ NatTree = μX. <leaf:Unit, node:{Nat, X, X}>;
 
 **解释：**
 
-- `NatTree` 是一个递归类型，定义为一个变体类型 `<leaf:Unit, node:{Nat, X, X}>`。
-- `leaf` 标签表示叶子节点，携带 `Unit` 类型的值。
-- `node` 标签表示内部节点，携带一个三元组 `{Nat, X, X}`，其中包含一个 `Nat` 类型的标签和两个子树，类型为 `X`。
+- $NatTree$ 是一个递归类型，定义为一个变体类型 $<leaf:Unit, node:{Nat, X, X}>$。
+- $leaf$ 标签表示叶子节点，携带 $Unit$ 类型的值。
+- $node$ 标签表示内部节点，携带一个三元组 ${Nat, X, X}$，其中包含一个 $Nat$ 类型的标签和两个子树，类型为 $X$。
 
 **构造操作：**
 
@@ -197,12 +197,12 @@ traverse = fix (λf:NatTree→NatList. λt:NatTree.
 
 **解释：**
 
-- **`traverse`**：递归地遍历树。
+- **$traverse$**：递归地遍历树。
   - 如果是叶子，返回空列表。
-  - 否则，获取左子树 `l`，右子树 `r`，节点标签 `n`。
-  - 返回一个列表，包含当前节点的标签 `n`，以及左子树和右子树遍历结果的连接。
+  - 否则，获取左子树 $l$，右子树 $r$，节点标签 $n$。
+  - 返回一个列表，包含当前节点的标签 $n$，以及左子树和右子树遍历结果的连接。
 
-**辅助函数 `append`（列表连接）：**
+**辅助函数 $append$（列表连接）：**
 
 ```plaintext
 append = fix (λf:NatList→NatList→NatList. λl1:NatList. λl2:NatList.
@@ -232,9 +232,9 @@ Hungry = μA. Nat → A;
 
 **解释：**
 
-- `Hungry` 是一个递归类型，表示接受一个 `Nat`，返回另一个 `Hungry` 的函数。
+- $Hungry$ 是一个递归类型，表示接受一个 $Nat$，返回另一个 $Hungry$ 的函数。
 
-可以使用 `fix` 运算符定义这个类型的一个元素：
+可以使用 $fix$ 运算符定义这个类型的一个元素：
 
 ```plaintext
 f = fix (λf: Nat → Hungry. λn:Nat. f);
@@ -252,7 +252,7 @@ f 0 1 2 3 4 5;
 
 #### **流 (Streams)**
 
-上面 `Hungry` 类型的一个更有用的变体是 `Stream` 类型，它可以消耗任意数量的 `Unit` 值，每次返回一个数字和一个新流的对。
+上面 $Hungry$ 类型的一个更有用的变体是 $Stream$ 类型，它可以消耗任意数量的 $Unit$ 值，每次返回一个数字和一个新流的对。
 
 ```plaintext
 Stream = μA. Unit → {Nat, A};
@@ -260,23 +260,23 @@ Stream = μA. Unit → {Nat, A};
 
 **解释：**
 
-- `Stream` 是一个递归类型，表示接受一个 `Unit`，返回一个包含 `Nat` 和新的 `Stream` 的记录 `{Nat, A}`。
+- $Stream$ 是一个递归类型，表示接受一个 $Unit$，返回一个包含 $Nat$ 和新的 $Stream$ 的记录 ${Nat, A}$。
 
-我们可以为流定义两个“解构器”；如果 `s` 是一个流，那么 `hd s` 是当我们传递 `unit` 给它时它返回的第一个数字。
+我们可以为流定义两个“解构器”；如果 $s$ 是一个流，那么 $hd s$ 是当我们传递 $unit$ 给它时它返回的第一个数字。
 
 ```plaintext
 hd = λs:Stream. (s unit).1;
 ⊢ hd : Stream → Nat
 ```
 
-类似地，`tl s` 是当我们传递 `unit` 给 `s` 时获得的新流。
+类似地，$tl s$ 是当我们传递 $unit$ 给 $s$ 时获得的新流。
 
 ```plaintext
 tl = λs:Stream. (s unit).2;
 ⊢ tl : Stream → Stream
 ```
 
-要构造一个流，我们像之前一样使用 `fix`：
+要构造一个流，我们像之前一样使用 $fix$：
 
 ```plaintext
 upfrom0 = fix (λf: Nat → Stream. λn:Nat. λ_:Unit. {n, f (succ n)}) 0;
@@ -334,8 +334,8 @@ Counter = μC. {get:Nat, inc:Unit → C};
 
 **解释：**
 
-- `Counter` 是一个递归类型，表示一个记录，包含一个 `Nat` 类型的 `get` 字段和一个接受 `Unit` 返回 `C` 的函数 `inc`。
-- 请注意，我们这里对对象的处理是纯函数式的（就像第 19 章，而不是第 18 章）：向计数器对象发送 `inc` 消息并不会导致该对象内部的状态发生变化；相反，该操作返回一个具有递增内部状态的新计数器对象。这里使用递归类型允许我们指定返回的对象与原始对象具有完全相同的类型。
+- $Counter$ 是一个递归类型，表示一个记录，包含一个 $Nat$ 类型的 $get$ 字段和一个接受 $Unit$ 返回 $C$ 的函数 $inc$。
+- 请注意，我们这里对对象的处理是纯函数式的（就像第 19 章，而不是第 18 章）：向计数器对象发送 $inc$ 消息并不会导致该对象内部的状态发生变化；相反，该操作返回一个具有递增内部状态的新计数器对象。这里使用递归类型允许我们指定返回的对象与原始对象具有完全相同的类型。
 
 与之前讨论的进程不同，这里的对象是一个包含函数的递归定义的记录，而进程是一个返回元组的递归定义的函数。这种观点的变化是有用的，因为我们可以扩展我们的记录，包含多个函数——例如，一个递减操作：
 
@@ -356,10 +356,10 @@ c = let create = fix (λf: {x:Nat} → Counter. λs: {x:Nat}.
 
 **解释：**
 
-- **`create`**：一个接受状态 `{x:Nat}` 并返回 `Counter` 的函数。
-- **`c`**：使用初始状态 `{x=0}` 创建的计数器对象。
+- **$create$**：一个接受状态 ${x:Nat}$ 并返回 $Counter$ 的函数。
+- **$c$**：使用初始状态 ${x=0}$ 创建的计数器对象。
 
-要调用 `c` 的操作，我们简单地取出适当的字段：
+要调用 $c$ 的操作，我们简单地取出适当的字段：
 
 ```plaintext
 c1 = c.inc unit;
@@ -374,17 +374,17 @@ c2.get;
 
 **问题：**
 
-扩展上述 `Counter` 类型和计数器 `c`，包括 `backup` 和 `reset` 操作（如我们在第 18.7 节中所做的）：调用 `backup` 会导致计数器将其当前值存储在一个单独的内部寄存器中；调用 `reset` 会导致计数器的值重置为该寄存器中的值。
+扩展上述 $Counter$ 类型和计数器 $c$，包括 $backup$ 和 $reset$ 操作（如我们在第 18.7 节中所做的）：调用 $backup$ 会导致计数器将其当前值存储在一个单独的内部寄存器中；调用 $reset$ 会导致计数器的值重置为该寄存器中的值。
 
 **解答：**
 
-**扩展 `Counter` 类型：**
+**扩展 $Counter$ 类型：**
 
 ```plaintext
 Counter = μC. {get:Nat, inc:Unit → C, dec:Unit → C, backup:Unit → C, reset:Unit → C};
 ```
 
-**修改 `create` 函数：**
+**修改 $create$ 函数：**
 
 ```plaintext
 c = let create = fix (λf: {x:Nat, b:Nat} → Counter. λs: {x:Nat, b:Nat}.
@@ -413,7 +413,7 @@ c5.get;
 
 #### **从递归类型中构建递归值**
 
-递归类型更令人惊讶的用法之一，也是清楚地揭示其表达能力的用法，是实现一个良类型的固定点组合子。对于任何类型 `T`，我们可以为其上的函数定义一个固定点构造器，如下所示。
+递归类型更令人惊讶的用法之一，也是清楚地揭示其表达能力的用法，是实现一个良类型的固定点组合子。对于任何类型 $T$，我们可以为其上的函数定义一个固定点构造器，如下所示。
 
 ```plaintext
 fixT = λf:T → T. (λx:(μA.A → T). f (x x)) (λx:(μA.A → T). f (x x));
@@ -422,15 +422,15 @@ fixT = λf:T → T. (λx:(μA.A → T). f (x x)) (λx:(μA.A → T). f (x x));
 
 **解释：**
 
-- **`fixT`**：一个接受函数 `f:T → T` 并返回 `T` 类型值的函数。
-- 这个定义中，`x` 的类型是 `(μA.A → T)`，即 `A` 是一个类型变量，递归地定义为 `A → T`。
-- `x x` 是自应用，这是通常在定义固定点组合子时的关键。
+- **$fixT$**：一个接受函数 $f:T → T$ 并返回 $T$ 类型值的函数。
+- 这个定义中，$x$ 的类型是 $(μA.A → T)$，即 $A$ 是一个类型变量，递归地定义为 $A → T$。
+- $x x$ 是自应用，这是通常在定义固定点组合子时的关键。
 
 注意，如果我们擦除类型，这个项正是我们在第 65 页中看到的无类型的固定点组合子。
 
-这里的关键技巧是使用递归类型为 `x x` 的两个出现赋予类型。正如我们在练习 9.3.2 中所观察到的，对 `x x` 进行类型化需要 `x` 具有一个箭头类型，其域是 `x` 本身的类型。显然，没有有限的类型具有此属性，但无限类型 `μA.A → T` 完美地完成了这个工作。
+这里的关键技巧是使用递归类型为 $x x$ 的两个出现赋予类型。正如我们在练习 9.3.2 中所观察到的，对 $x x$ 进行类型化需要 $x$ 具有一个箭头类型，其域是 $x$ 本身的类型。显然，没有有限的类型具有此属性，但无限类型 $μA.A → T$ 完美地完成了这个工作。
 
-这个示例的一个推论是，递归类型的存在破坏了强规范化 (strong normalization) 属性：我们可以使用 `fixT` 组合子编写一个良类型的项，当应用于 `unit` 时，其求值将发散。
+这个示例的一个推论是，递归类型的存在破坏了强规范化 (strong normalization) 属性：我们可以使用 $fixT$ 组合子编写一个良类型的项，当应用于 $unit$ 时，其求值将发散。
 
 ```plaintext
 divergeT = λ_:Unit. fixT (λx:T. x);
@@ -447,7 +447,7 @@ divergeT = λ_:Unit. fixT (λx:T. x);
 
 #### **无类型 λ 演算的再现**
 
-也许最能说明递归类型的强大之处的是，我们可以将整个无类型 λ 演算以一种良类型的方式嵌入到一个具有递归类型的静态类型语言中。令 `D` 为以下类型：^4
+也许最能说明递归类型的强大之处的是，我们可以将整个无类型 λ 演算以一种良类型的方式嵌入到一个具有递归类型的静态类型语言中。令 $D$ 为以下类型：^4
 
 ```plaintext
 D = μX. X → X;
@@ -455,9 +455,9 @@ D = μX. X → X;
 
 **解释：**
 
-- `D` 是一个递归类型，表示从 `X` 到 `X` 的函数，其中 `X` 被定义为 `D` 本身。
+- $D$ 是一个递归类型，表示从 $X$ 到 $X$ 的函数，其中 $X$ 被定义为 $D$ 本身。
 
-定义一个“注入函数” `lam`，将从 `D` 到 `D` 的函数映射为 `D` 的元素，如下所示：
+定义一个“注入函数” $lam$，将从 $D$ 到 $D$ 的函数映射为 $D$ 的元素，如下所示：
 
 ```plaintext
 lam = λf:D → D. f as D;
@@ -466,9 +466,9 @@ lam = λf:D → D. f as D;
 
 **解释：**
 
-- `lam` 接受一个 `D → D` 的函数 `f`，将其强制转换为类型 `D`。
+- $lam$ 接受一个 $D → D$ 的函数 $f$，将其强制转换为类型 $D$。
 
-要将一个 `D` 类型的元素应用于另一个，我们简单地展开第一个元素的类型，得到一个函数，然后将其应用于第二个：
+要将一个 $D$ 类型的元素应用于另一个，我们简单地展开第一个元素的类型，得到一个函数，然后将其应用于第二个：
 
 ```plaintext
 ap = λf:D. λa:D. f a;
@@ -477,15 +477,15 @@ ap = λf:D. λa:D. f a;
 
 **解释：**
 
-- `ap` 接受一个 `D` 类型的函数 `f` 和一个 `D` 类型的参数 `a`，返回 `f a`。
+- $ap$ 接受一个 $D$ 类型的函数 $f$ 和一个 $D$ 类型的参数 $a$，返回 $f a$。
 
-现在，假设 `M` 是一个仅涉及变量、抽象和应用的封闭 λ 项。然后，我们可以以一种统一的方式构造一个表示 `M` 的 `D` 的元素，记为 `M^*`，如下：
+现在，假设 $M$ 是一个仅涉及变量、抽象和应用的封闭 λ 项。然后，我们可以以一种统一的方式构造一个表示 $M$ 的 $D$ 的元素，记为 $M^*$，如下：
 
-- 如果 `M` 是变量 `x`，则 `M^* = x`。
-- 如果 `M` 是抽象 `λx.N`，则 `M^* = lam (λx:D. N^*)`。
-- 如果 `M` 是应用 `M N`，则 `M^* = ap M^* N^*`。
+- 如果 $M$ 是变量 $x$，则 $M^* = x$。
+- 如果 $M$ 是抽象 $λx.N$，则 $M^* = lam (λx:D. N^*)$。
+- 如果 $M$ 是应用 $M N$，则 $M^* = ap M^* N^*$。
 
-例如，以下是作为 `D` 的元素表达的无类型固定点组合子：
+例如，以下是作为 $D$ 的元素表达的无类型固定点组合子：
 
 ```plaintext
 fixD = lam (λf:D.
@@ -496,22 +496,22 @@ fixD = lam (λf:D.
 
 **解释：**
 
-- 这是经典的固定点组合子的表示，其类型是 `D`。
+- 这是经典的固定点组合子的表示，其类型是 $D$。
 
-这种纯 λ 演算的嵌入可以扩展以包括诸如数字之类的特性。我们将 `D` 的定义更改为具有一个用于数字的标签和一个用于函数的标签的变体类型：
+这种纯 λ 演算的嵌入可以扩展以包括诸如数字之类的特性。我们将 $D$ 的定义更改为具有一个用于数字的标签和一个用于函数的标签的变体类型：
 
 ```plaintext
 D = μX. <nat:Nat, fn:X → X>;
 ```
 
-也就是说，`D` 的元素要么是一个数字，要么是一个从 `D` 到 `D` 的函数，分别标记为 `nat` 或 `fn`。`lam` 构造器的实现与之前基本相同：
+也就是说，$D$ 的元素要么是一个数字，要么是一个从 $D$ 到 $D$ 的函数，分别标记为 $nat$ 或 $fn$。$lam$ 构造器的实现与之前基本相同：
 
 ```plaintext
 lam = λf:D → D. <fn=f> as D;
 ⊢ lam : (D → D) → D
 ```
 
-然而，`ap` 的实现以一种有趣的方式不同：
+然而，$ap$ 的实现以一种有趣的方式不同：
 
 ```plaintext
 ap = λf:D. λa:D.
@@ -523,11 +523,11 @@ ap = λf:D. λa:D.
 
 **解释：**
 
-- 在应用 `f` 到 `a` 之前，我们需要通过 `case` 从 `f` 中提取一个函数。
-- 这迫使我们指定当 `f` 不是函数时应用的行为（在本例中，我们让程序发散；我们也可以引发异常）。
+- 在应用 $f$ 到 $a$ 之前，我们需要通过 $case$ 从 $f$ 中提取一个函数。
+- 这迫使我们指定当 $f$ 不是函数时应用的行为（在本例中，我们让程序发散；我们也可以引发异常）。
 - 注意这里的标签检查与在动态类型语言（如 Scheme）的实现中运行时的标签检查是多么相似。从这个意义上说，类型化的计算可以说“包含”了无类型或动态类型的计算。
 
-为了定义作用于 `D` 的元素的 `succ` 函数，需要类似的标签检查：
+为了定义作用于 $D$ 的元素的 $succ$ 函数，需要类似的标签检查：
 
 ```plaintext
 suc = λf:D. case f of
@@ -536,7 +536,7 @@ suc = λf:D. case f of
 ⊢ suc : D → D
 ```
 
-将 `0` 注入到 `D` 中是简单的：
+将 $0$ 注入到 $D$ 中是简单的：
 
 ```plaintext
 zro = <nat=0> as D;
@@ -545,7 +545,7 @@ zro = <nat=0> as D;
 
 ---
 
-^4 **注释**：熟悉指称语义 (denotational semantics) 的读者会注意到，`D` 的定义恰好是用于纯 λ 演算的语义模型中通用域 (universal domains) 的定义属性。
+^4 **注释**：熟悉指称语义 (denotational semantics) 的读者会注意到，$D$ 的定义恰好是用于纯 λ 演算的语义模型中通用域 (universal domains) 的定义属性。
 
 ---
 
@@ -553,11 +553,11 @@ zro = <nat=0> as D;
 
 **问题：**
 
-用布尔值和条件语句扩展此编码，并将项 `if false then 1 else 0` 和 `if false then 1 else false` 编码为 `D` 的元素。当我们求值这些项时，会发生什么？
+用布尔值和条件语句扩展此编码，并将项 $if false then 1 else 0$ 和 $if false then 1 else false$ 编码为 $D$ 的元素。当我们求值这些项时，会发生什么？
 
 **解答：**
 
-**扩展 `D` 的定义：**
+**扩展 $D$ 的定义：**
 
 ```plaintext
 D = μX. <nat:Nat, fn:X → X, bool:Bool>;
@@ -573,20 +573,20 @@ ifD = λb:D. λt:D. λe:D.
     | _ ⇒ divergeD unit;
 ```
 
-**将项编码为 `D` 的元素：**
+**将项编码为 $D$ 的元素：**
 
-- `falseD = <bool=false> as D;`
-- `oneD = <nat=1> as D;`
-- `zeroD = <nat=0> as D;`
+- $falseD = <bool=false> as D;$
+- $oneD = <nat=1> as D;$
+- $zeroD = <nat=0> as D;$
 
-**编码并求值 `if false then 1 else 0`：**
+**编码并求值 $if false then 1 else 0$：**
 
 ```plaintext
 ifD falseD oneD zeroD;
 ⊢ zeroD : D
 ```
 
-**编码并求值 `if false then 1 else false`：**
+**编码并求值 $if false then 1 else false$：**
 
 ```plaintext
 falseD = <bool=false> as D;
@@ -598,8 +598,8 @@ ifD falseD oneD falseD';
 
 **当我们求值这些项时，会发生什么？**
 
-- 对于第一个表达式，结果是 `zeroD`，即 `<nat=0> as D`。
-- 对于第二个表达式，结果是 `<bool=false> as D`。
+- 对于第一个表达式，结果是 $zeroD$，即 $<nat=0> as D$。
+- 对于第二个表达式，结果是 $<bool=false> as D$。
 - 这表明我们的编码能够正确处理条件语句，并根据条件选择正确的分支。
 
 ---
@@ -608,25 +608,25 @@ ifD falseD oneD falseD';
 
 **问题：**
 
-将数据类型 `D` 扩展为包括记录：
+将数据类型 $D$ 扩展为包括记录：
 
 ```plaintext
 D = μX. <nat:Nat, fn:X → X, rcd:Nat → X>;
 ```
 
-并实现记录构造和字段投影。为简单起见，使用自然数作为字段标签——即，记录表示为从自然数到 `D` 元素的函数。使用 `fullequirec` 检查器测试你的扩展。
+并实现记录构造和字段投影。为简单起见，使用自然数作为字段标签——即，记录表示为从自然数到 $D$ 元素的函数。使用 $fullequirec$ 检查器测试你的扩展。
 
 **解答：**
 
 **实现记录构造和字段投影：**
 
-- **记录构造函数 `rcd`：**
+- **记录构造函数 $rcd$：**
 
   ```plaintext
   rcd = λf:Nat → D. <rcd=f> as D;
   ```
 
-- **字段投影函数 `proj`：**
+- **字段投影函数 $proj$：**
 
   ```plaintext
   proj = λr:D. λl:Nat.
@@ -656,7 +656,7 @@ proj myrcd 2;
 
 ### **20.2 正式化 (Formalities)**
 
-在类型系统的文献中，对递归类型有两种基本的方法。它们之间的本质区别体现在对一个简单问题的回答上：类型 `μX.T` 与其一步展开之间是什么关系？例如，`NatList` 与 `<nil:Unit, cons:{Nat,NatList}>` 之间的关系是什么？
+在类型系统的文献中，对递归类型有两种基本的方法。它们之间的本质区别体现在对一个简单问题的回答上：类型 $μX.T$ 与其一步展开之间是什么关系？例如，$NatList$ 与 $<nil:Unit, cons:{Nat,NatList}>$ 之间的关系是什么？
 
 ---
 
@@ -670,7 +670,7 @@ proj myrcd 2;
 
 ### **20.2 正式化 (Formalities)**
 
-在类型系统的研究中，对于递归类型有两种基本的方法。它们之间的本质区别在于对以下简单问题的回答：类型 `μX.T` 与其一次展开之间是什么关系？例如，`NatList` 和 `<nil:Unit, cons:{Nat,NatList}>` 之间的关系是什么？
+在类型系统的研究中，对于递归类型有两种基本的方法。它们之间的本质区别在于对以下简单问题的回答：类型 $μX.T$ 与其一次展开之间是什么关系？例如，$NatList$ 和 $<nil:Unit, cons:{Nat,NatList}>$ 之间的关系是什么？
 
 ---
 
@@ -678,13 +678,13 @@ proj myrcd 2;
 
 1. **等式递归 (Equi-recursive) 方法：**
 
-   - 在这种方法中，认为递归类型 `μX.T` 和它的展开是定义相等的（definitional equal）——在所有上下文中可以互换，因为它们代表相同的无限树。^5
+   - 在这种方法中，认为递归类型 $μX.T$ 和它的展开是定义相等的（definitional equal）——在所有上下文中可以互换，因为它们代表相同的无限树。^5
    - 类型检查器的职责是确保一个类型的项被允许作为期望另一个类型的函数的参数等。
 
 2. **同构递归 (Iso-recursive) 方法：**
 
    - 在这种方法中，递归类型和它的展开是不同的，但同构的。
-   - 通过引入 `fold` 和 `unfold` 操作，将类型之间的同构显式化。
+   - 通过引入 $fold$ 和 $unfold$ 操作，将类型之间的同构显式化。
 
 ---
 
@@ -706,15 +706,15 @@ proj myrcd 2;
 
 - **处理方式：**
 
-  - 递归类型 `μX.T` 和其展开 `[X ↦ μX.T] T` 被视为不同的类型，但它们之间存在同构。
-  - 引入 `fold` 和 `unfold` 操作，将值在这两个类型之间来回映射。
+  - 递归类型 $μX.T$ 和其展开 $[X ↦ μX.T] T$ 被视为不同的类型，但它们之间存在同构。
+  - 引入 $fold$ 和 $unfold$ 操作，将值在这两个类型之间来回映射。
 
 - **形式化：**
 
   - **递归类型的展开 (Unfolding of a Recursive Type)**：
 
-    - `μX.T` 的展开是通过将其主体 `T` 中的所有 `X` 替换为整个递归类型 `[X ↦ μX.T] T` 而获得的。
-    - 例如，`NatList` 的展开是：
+    - $μX.T$ 的展开是通过将其主体 $T$ 中的所有 $X$ 替换为整个递归类型 $[X ↦ μX.T] T$ 而获得的。
+    - 例如，$NatList$ 的展开是：
 
       $$
       \begin{align*}
@@ -723,9 +723,9 @@ proj myrcd 2;
       \end{align*}
       $$
 
-  - **`fold` 和 `unfold` 操作：**
+  - **$fold$ 和 $unfold$ 操作：**
 
-    - 对于每个递归类型 `μX.T`，引入一对函数：
+    - 对于每个递归类型 $μX.T$，引入一对函数：
 
       $$
       \begin{align*}
@@ -750,9 +750,9 @@ proj myrcd 2;
 
     **解释**：
 
-    - 当我们对一个折叠的值应用 `unfold` 时，它会抵消 `fold`，返回原始值 `v_1`。
+    - 当我们对一个折叠的值应用 $unfold$ 时，它会抵消 $fold$，返回原始值 $v_1$。
 
-  - **类型规则确保 `fold` 和 `unfold` 操作的正确性**。
+  - **类型规则确保 $fold$ 和 $unfold$ 操作的正确性**。
 
 ---
 
@@ -765,12 +765,12 @@ proj myrcd 2;
 - **同构递归的优势：**
 
   - 类型系统和类型检查算法更简单，类型表达式仍然是有限的。
-  - 需要在程序中显式地使用 `fold` 和 `unfold` 操作，但这些注释通常可以隐藏或与其他注释合并。
+  - 需要在程序中显式地使用 $fold$ 和 $unfold$ 操作，但这些注释通常可以隐藏或与其他注释合并。
 
 - **实践中的应用**：
 
   - 在 ML 家族的语言中，每个数据类型定义隐式地引入了一个递归类型。
-  - 在 Java 中，每个类定义隐式地引入了一个递归类型，对象上的方法调用涉及隐式的 `unfold`。
+  - 在 Java 中，每个类定义隐式地引入了一个递归类型，对象上的方法调用涉及隐式的 $unfold$。
 
 ---
 
@@ -786,7 +786,7 @@ proj myrcd 2;
 
   **解释**：
 
-  - 添加了两个新操作：`fold [T] t` 和 `unfold [T] t`，用于递归类型的折叠和展开。
+  - 添加了两个新操作：$fold [T] t$ 和 $unfold [T] t$，用于递归类型的折叠和展开。
 
 - **值 (Values)**：
 
@@ -796,7 +796,7 @@ proj myrcd 2;
 
   **解释**：
 
-  - 一个折叠的值 `fold [T] v` 也是一个值。
+  - 一个折叠的值 $fold [T] v$ 也是一个值。
 
 - **类型 (Types)**：
 
@@ -806,7 +806,7 @@ proj myrcd 2;
 
   **解释**：
 
-  - 添加了类型变量 `X` 和递归类型 `μX.T`。
+  - 添加了类型变量 $X$ 和递归类型 $μX.T$。
 
 ---
 
@@ -824,7 +824,7 @@ proj myrcd 2;
 
    **结果**：
 
-   - `unfold [S] (fold [T] v_1)` 归约为 `v_1`。
+   - $unfold [S] (fold [T] v_1)$ 归约为 $v_1$。
 
 2. **E-Fld（折叠）**：
 
@@ -834,7 +834,7 @@ proj myrcd 2;
 
    **解释**：
 
-   - 如果 `t_1` 可以归约为 `t_1'`，则 `fold [T] t_1` 归约为 `fold [T] t_1'`。
+   - 如果 $t_1$ 可以归约为 $t_1'$，则 $fold [T] t_1$ 归约为 $fold [T] t_1'$。
 
 3. **E-Unfld（展开）**：
 
@@ -844,7 +844,7 @@ proj myrcd 2;
 
    **解释**：
 
-   - 如果 `t_1` 可以归约为 `t_1'`，则 `unfold [T] t_1` 归约为 `unfold [T] t_1'`。
+   - 如果 $t_1$ 可以归约为 $t_1'$，则 $unfold [T] t_1$ 归约为 $unfold [T] t_1'$。
 
 ---
 
@@ -860,12 +860,12 @@ proj myrcd 2;
 
    - 前提：
 
-     - `U` 是一个递归类型，`U = μX.T_1`。
-     - 在环境 `Γ` 下，`t_1` 的类型是 `[X ↦ U] T_1`，即用 `U` 替换 `T_1` 中的 `X`。
+     - $U$ 是一个递归类型，$U = μX.T_1$。
+     - 在环境 $Γ$ 下，$t_1$ 的类型是 $[X ↦ U] T_1$，即用 $U$ 替换 $T_1$ 中的 $X$。
 
    - 结论：
 
-     - `fold [U] t_1` 的类型是 `U`。
+     - $fold [U] t_1$ 的类型是 $U$。
 
 2. **T-Unfld（展开）**：
 
@@ -877,38 +877,38 @@ proj myrcd 2;
 
    - 前提：
 
-     - `U` 是一个递归类型，`U = μX.T_1`。
-     - 在环境 `Γ` 下，`t_1` 的类型是 `U`。
+     - $U$ 是一个递归类型，$U = μX.T_1$。
+     - 在环境 $Γ$ 下，$t_1$ 的类型是 $U$。
 
    - 结论：
 
-     - `unfold [U] t_1` 的类型是 `[X ↦ U] T_1`。
+     - $unfold [U] t_1$ 的类型是 $[X ↦ U] T_1$。
 
 ---
 
 **示例：**
 
-让我们使用同构递归方法重新定义 `NatList` 及其相关操作。
+让我们使用同构递归方法重新定义 $NatList$ 及其相关操作。
 
-**定义 `NatList` 的展开形式：**
+**定义 $NatList$ 的展开形式：**
 
 ```plaintext
 NLBody = <nil:Unit, cons:{Nat, NatList}>;
 ```
 
-**`nil` 的定义：**
+**$nil$ 的定义：**
 
 ```plaintext
 nil = fold [NatList] (<nil=unit> as NLBody);
 ```
 
-**`cons` 的定义：**
+**$cons$ 的定义：**
 
 ```plaintext
 cons = λn:Nat. λl:NatList. fold [NatList] (<cons={n,l}> as NLBody);
 ```
 
-**`isnil` 的定义：**
+**$isnil$ 的定义：**
 
 ```plaintext
 isnil = λl:NatList.
@@ -917,7 +917,7 @@ isnil = λl:NatList.
       | <cons=p> ⇒ false;
 ```
 
-**`hd` 的定义：**
+**$hd$ 的定义：**
 
 ```plaintext
 hd = λl:NatList.
@@ -926,7 +926,7 @@ hd = λl:NatList.
       | <cons=p> ⇒ p.1;
 ```
 
-**`tl` 的定义：**
+**$tl$ 的定义：**
 
 ```plaintext
 tl = λl:NatList.
@@ -941,11 +941,11 @@ tl = λl:NatList.
 
 **问题：**
 
-使用显式的 `fold` 和 `unfold` 注释，重新表述第 20.1 节中的一些其他示例（特别是第 273 页的 `fixT` 示例）。使用 `fullisorec` 检查器检查它们。
+使用显式的 $fold$ 和 $unfold$ 注释，重新表述第 20.1 节中的一些其他示例（特别是第 273 页的 $fixT$ 示例）。使用 $fullisorec$ 检查器检查它们。
 
 **解答：**
 
-**重新表述 `fixT` 示例：**
+**重新表述 $fixT$ 示例：**
 
 **原始定义（等式递归）：**
 
@@ -953,13 +953,13 @@ tl = λl:NatList.
 fixT = λf:T → T. (λx:(μA.A → T). f (x x)) (λx:(μA.A → T). f (x x));
 ```
 
-**使用同构递归，需要显式的 `fold` 和 `unfold` 操作。首先，定义类型：**
+**使用同构递归，需要显式的 $fold$ 和 $unfold$ 操作。首先，定义类型：**
 
 ```plaintext
 FixTType = μA. A → T;
 ```
 
-**然后，重写 `fixT`：**
+**然后，重写 $fixT$：**
 
 ```plaintext
 fixT = λf:T → T.
@@ -969,11 +969,11 @@ fixT = λf:T → T.
 
 **解释：**
 
-- `x` 的类型是 `FixTType`，即 `μA. A → T`。
-- 在 `x x` 中，需要展开 `x` 的类型，以便应用 `x` 自身。
-- 使用 `unfold [FixTType] x` 将 `x` 从类型 `FixTType` 展开为 `A → T`，然后可以应用于 `x`。
+- $x$ 的类型是 $FixTType$，即 $μA. A → T$。
+- 在 $x x$ 中，需要展开 $x$ 的类型，以便应用 $x$ 自身。
+- 使用 $unfold [FixTType] x$ 将 $x$ 从类型 $FixTType$ 展开为 $A → T$，然后可以应用于 $x$。
 
-**使用 `fullisorec` 检查器测试此定义。**
+**使用 $fullisorec$ 检查器测试此定义。**
 
 ---
 
@@ -981,51 +981,51 @@ fixT = λf:T → T.
 
 **问题：**
 
-为同构递归系统（`λμ`）概述进展性 (progress) 和保持性 (preservation) 定理的证明。
+为同构递归系统（$λμ$）概述进展性 (progress) 和保持性 (preservation) 定理的证明。
 
 **解答：**
 
 **进展性定理：**
 
-**定理**：如果 `t` 是良类型的、闭合的项，那么要么 `t` 是一个值，要么存在 `t'`，使得 `t → t'`。
+**定理**：如果 $t$ 是良类型的、闭合的项，那么要么 $t$ 是一个值，要么存在 $t'$，使得 $t → t'$。
 
 **证明思路：**
 
-- 我们对 `t` 的结构进行归纳。
-- 需要考虑新的构造 `fold [T] t` 和 `unfold [T] t`。
-- 对于 `fold [T] t`，如果 `t` 是值，则 `fold [T] t` 也是值；如果 `t` 可以归约，则根据规则 `E-Fld`，`fold [T] t` 可以归约。
-- 对于 `unfold [T] t`，如果 `t` 是值并且形如 `fold [T] v`，则根据规则 `E-UnfldFld`，`unfold [T] t` 可以归约为 `v`；否则，如果 `t` 可以归约，则根据规则 `E-Unfld`，`unfold [T] t` 可以归约。
+- 我们对 $t$ 的结构进行归纳。
+- 需要考虑新的构造 $fold [T] t$ 和 $unfold [T] t$。
+- 对于 $fold [T] t$，如果 $t$ 是值，则 $fold [T] t$ 也是值；如果 $t$ 可以归约，则根据规则 $E-Fld$，$fold [T] t$ 可以归约。
+- 对于 $unfold [T] t$，如果 $t$ 是值并且形如 $fold [T] v$，则根据规则 $E-UnfldFld$，$unfold [T] t$ 可以归约为 $v$；否则，如果 $t$ 可以归约，则根据规则 $E-Unfld$，$unfold [T] t$ 可以归约。
 
 **保持性定理：**
 
-**定理**：如果 `Γ ⊢ t : T` 且 `t → t'`，则存在 `T'`，使得 `Γ ⊢ t' : T'`，并且 `T'` 与 `T` 相关（可能相等或根据子类型关系）。
+**定理**：如果 $Γ ⊢ t : T$ 且 $t → t'$，则存在 $T'$，使得 $Γ ⊢ t' : T'$，并且 $T'$ 与 $T$ 相关（可能相等或根据子类型关系）。
 
 **证明思路：**
 
 - 对归约步骤进行分析，检查每个归约规则是否保持类型。
-- 特别地，考虑新的规则 `E-UnfldFld`。
-  - 根据类型规则 `T-Fld` 和 `T-Unfld`，可以证明 `unfold [T] (fold [T] v)` 的类型为 `[X ↦ μX.T_1] T_1`，而 `v` 的类型也是 `[X ↦ μX.T_1] T_1`，因此类型保持。
+- 特别地，考虑新的规则 $E-UnfldFld$。
+  - 根据类型规则 $T-Fld$ 和 $T-Unfld$，可以证明 $unfold [T] (fold [T] v)$ 的类型为 $[X ↦ μX.T_1] T_1$，而 $v$ 的类型也是 $[X ↦ μX.T_1] T_1$，因此类型保持。
 
 ---
 
 ### **20.3 子类型 (Subtyping)**
 
-在本章的最后一个问题是需要处理递归类型与我们迄今为止所看到的简单类型 λ 演算的另一个主要扩展——子类型 (subtyping)——的结合。例如，假设类型 `Even` 是 `Nat` 的子类型，那么类型 `μX.Nat → (Even × X)` 和 `μX.Even → (Nat × X)` 之间应该是什么关系？
+在本章的最后一个问题是需要处理递归类型与我们迄今为止所看到的简单类型 λ 演算的另一个主要扩展——子类型 (subtyping)——的结合。例如，假设类型 $Even$ 是 $Nat$ 的子类型，那么类型 $μX.Nat → (Even × X)$ 和 $μX.Even → (Nat × X)$ 之间应该是什么关系？
 
 ---
 
 **直观分析：**
 
 - 将这些类型视为无限展开的类型，思考它们的元素的行为。
-- **类型 `μX.Nat → (Even × X)`**：
+- **类型 $μX.Nat → (Even × X)$**：
 
-  - 接受一个 `Nat`，返回一个包含 `Even` 和下一个同类型函数的元组。
-  - 函数可以接受任意 `Nat`，但只返回 `Even`。
+  - 接受一个 $Nat$，返回一个包含 $Even$ 和下一个同类型函数的元组。
+  - 函数可以接受任意 $Nat$，但只返回 $Even$。
 
-- **类型 `μX.Even → (Nat × X)`**：
+- **类型 $μX.Even → (Nat × X)$**：
 
-  - 接受一个 `Even`，返回一个包含 `Nat` 和下一个同类型函数的元组。
-  - 函数只接受 `Even`，但可以返回任意 `Nat`。
+  - 接受一个 $Even$，返回一个包含 $Nat$ 和下一个同类型函数的元组。
+  - 函数只接受 $Even$，但可以返回任意 $Nat$。
 
 - **子类型关系**：
 
@@ -1034,8 +1034,8 @@ fixT = λf:T → T.
 
 - **结论**：
 
-  - `μX.Nat → (Even × X)` 比 `μX.Even → (Nat × X)` 更具体，因为它要求返回 `Even`，接受任意 `Nat`。
-  - 因此，`μX.Nat → (Even × X)` 是 `μX.Even → (Nat × X)` 的子类型。
+  - $μX.Nat → (Even × X)$ 比 $μX.Even → (Nat × X)$ 更具体，因为它要求返回 $Even$，接受任意 $Nat$。
+  - 因此，$μX.Nat → (Even × X)$ 是 $μX.Even → (Nat × X)$ 的子类型。
 
 ---
 
